--- a/新闻/美国之音.md
+++ b/新闻/美国之音.md
@@ -1,4 +1,8 @@
 
+  ## 6/2/2023 - [6.4忌日临近 北京强迫旅游异议人士 加紧驱赶人权律师](https://www.voachinese.com/a/beijing-escalates-security-measures-by-driving-away-dissidents-and-rights-lawyers-prior-to-34th-anniversary-of-tiananmen-massacre-20230602/7119401.html)
+ ```震惊世界的天安门事件34周年来临之际，中共当局一如既往地避而不提其当年所称的“平息反革命暴乱”或后来淡化为“政治风波”的这段历史，而是强调国家安全，高度戒备，加强了对政治敏感人物的严密监控，要求他们在六四敏感期噤声及中断与外界联系，甚至强迫一些异议人士外出旅游，同时加紧驱赶一些在北京的人权律师及其亲属，严重干扰了他们的正常生活和工作。```0
+  ## 6/2/2023 - [美中关系恶化 北京为何奉马斯克为座上宾？](https://www.voachinese.com/a/musk-china-visit-20230601/7119766.html)
+ ```特斯拉公司首席执行官埃隆·马斯克时隔三年后访问中国，受到北京高规格接待。分析认为，中国利用马斯克这样的国际商界领袖重塑自己的“开放”形象，而国际企业在急于维持中国市场的同时将不可避免地受到美中关系“逆风”的影响。```0
   ## 6/2/2023 - [中国对美光芯片的禁令将是美韩关系试金石](https://www.voachinese.com/a/china-s-micron-chips-ban-is-litmus-test-for-south-korea-20230601/7119776.html)
  ```华盛顿和北京之间的半导体贸易战可能会让首尔陷入困境，因为韩国必须在支持其最亲密的盟友或接受其最大贸易伙伴中国提供的利润丰厚的出口机会之间做出选择。```0
   ## 6/2/2023 - [专家分析：中国不大可能因朝鲜发射卫星而对其采取行动](https://www.voachinese.com/a/experts-north-korea-s-satellite-launch-unlikely-to-draw-china-s-action-20230601/7119792.html)
@@ -35,7 +39,3 @@
  ```美国顶尖人工智能芯片和超算供应商英伟达（Nvidia）创办人兼首席执行官黄仁勋星期四（6月1日）表示，依赖台湾生产高端和先进人工智能等芯片仍“完全安全”。```0
   ## 6/1/2023 - [福建舰甲板“裂痕”何来？专家：应为流水测试所致](https://www.voachinese.com/a/why-are-there-cracks-on-the-deck-of-china-s-fujian-ship-20230601/7118441.html)
  ```中国第三艘航母福建舰即将进行海试，但近来网络热议福建舰甲板疑似出现了两道明显的“裂痕”，引发中国航母是否为“豆腐渣”工程的疑虑。军事专家研判，这应是测试用的水流在甲板上的“砂道漆”所致，才会让“裂痕”看起来呈现不规则状甚至还会“移位”，福建舰甲板本身发生裂缝的机率应不高。```0
-  ## 6/1/2023 - [对新一代中国异议者而言，六四是遥远的历史，也是值得被铭记的标志](https://www.voachinese.com/a/june-4-young-chinese-20230531/7117687.html)
- ```随着中国这个世界第二大经济体近年来对公民社会的不断蚕食和持续收紧的网络审查，年轻的异议者们并不看好类似六四和“白纸运动”这样的本土草根政治运动给中国带来民主的可行性。尽管如此，美国之音采访的千禧一代们仍然表示，作为他们政治启蒙的六四学运依然值得被铭记。```0
-  ## 6/1/2023 - [中国毕业生在萎靡的就业市场上降低期望](https://www.voachinese.com/a/chinese-graduates-lower-their-ambitions-in-moribund-jobs-market-20230601/7118266.html)
- ```两年来，应用数学专业的毕业生梁华晓（音译，LiangHuaxiao），试图在一家中国科技巨头找份工作，然后她尝试了客务和销售，后来她申请了一家面包店和一家美容院的助理职位。```0
