--- a/新闻/德国之声.md
+++ b/新闻/德国之声.md
@@ -1,4 +1,6 @@
 
+  ## 6/2/2023 - [美國債務上限法案在參議院過關](https://www.dw.com/zh/美國債務上限法案在參議院過關/a-65760918?maca=chi-rss-chi-all-1127-rdf)
+ ```為了在6月5日的違約最後期限之前讓法案過關，美國國會在跟時間賽跑，最後終於在週四通過法案，可送交美國總統拜登簽署。```0
   ## 6/2/2023 - [馬斯克訪華成中國焦點 傳曾經會晤丁薛祥](https://www.dw.com/zh/馬斯克訪華成中國焦點-傳曾經會晤丁薛祥/a-65789014?maca=chi-rss-chi-all-1127-rdf)
  ```特斯拉首席執行官馬斯克6月1日結束炫風訪華行。有外媒報導，他週三曾與中國國務院副總理丁薛祥會晤，但中國官方尚未證實這項消息。```0
   ## 6/2/2023 - [俄控美用iPhone監控外交官 蘋果否認](https://www.dw.com/zh/俄控美用iphone監控外交官-蘋果否認/a-65800294?maca=chi-rss-chi-all-1127-rdf)
@@ -27,8 +29,6 @@
  ```中国官方公布的制造业PMI显示工业生产继续萎缩。不过，经济杂志财新公布的PMI则显示工业生产处于扩张状态。但即便是财新的调查也显示，就业以及企业信心仍处于低位。```0
   ## 6/1/2023 - [李尚福拒絕會晤 美防長：令人遺憾](https://www.dw.com/zh/李尚福拒絕會晤-美防長：令人遺憾/a-65766662?maca=chi-rss-chi-all-1127-rdf)
  ```《華爾街日報》29日報導，中國拒絕了美國提議雙方國防部長於新加坡會晤的請求。對此，美國防長奧斯汀表示「令人遺憾」，中國則要求美國「展現誠意」。為什麼中國拒絕此提議？```0
-  ## 6/1/2023 - [美眾院通過債務上限法案 送交參院表決](https://www.dw.com/zh/美眾院通過債務上限法案-送交參院表決/a-65760918?maca=chi-rss-chi-all-1127-rdf)
- ```美國眾議院週三（5月31日）通過拜登與麥卡錫達成協議的債務上限法案，可望避免聯邦政府在6月初發生災難性的倒債危機。```0
   ## 6/1/2023 - [中國國內旅遊熱 海外旅遊仍未達疫前水準](https://www.dw.com/zh/中國國內旅遊熱-海外旅遊仍未達疫前水準/a-65788012?maca=chi-rss-chi-all-1127-rdf)
  ```儘管中國今年初取消了旅行限制，中國國內旅遊也十分火熱，但中國公民的簽證申請量仍遠低於疫情前的水準，顯示中國旅客的國際旅遊尚未完全復甦。```0
   ## 6/1/2023 - [紐約警官捲入中國「獵狐行動」案件開審](https://www.dw.com/zh/紐約警官捲入中國「獵狐行動」案件開審/a-65787904?maca=chi-rss-chi-all-1127-rdf)
