--- a/新闻/美国之音.md
+++ b/新闻/美国之音.md
@@ -1,6 +1,8 @@
 
+  ## 6/2/2023 - [由于中国不断镇压异议 “六四纪念馆”转战纽约市开放](https://www.voachinese.com/a/as-china-cracks-down-on-dissent-new-york-city-gives-refuge-to-exhibit-remembering-tiananmen-square-20230602/7119847.html)
+ ```现年50多岁的周锋锁，对1989年那个令人沮丧的春天记忆犹新，当时坦克车开进了北京的天安门广场。当共产党的军队蜂拥而上强制结束民主抗议活动时，大学生们和许多人遭到殴打、流血，导致数百甚至数千人死亡。```0
   ## 6/2/2023 - [6.4忌日临近 北京强迫旅游异议人士 加紧驱赶人权律师](https://www.voachinese.com/a/beijing-escalates-security-measures-by-driving-away-dissidents-and-rights-lawyers-prior-to-34th-anniversary-of-tiananmen-massacre-20230602/7119401.html)
- ```震惊世界的天安门事件34周年来临之际，中共当局一如既往地避而不提其当年所称的“平息反革命暴乱”或后来淡化为“政治风波”的这段历史，而是强调国家安全，高度戒备，加强了对政治敏感人物的严密监控，要求他们在六四敏感期噤声及中断与外界联系，甚至强迫一些异议人士外出旅游，同时加紧驱赶一些在北京的人权律师及其亲属，严重干扰了他们的正常生活和工作。```0
+ ```震惊世界的天安门事件34周年来临之际，中共当局在党总书记习近平强行连任、经历三年疫情和白纸运动之后仍然一如既往地避而不提其当年所称的“平息反革命暴乱”或后来淡化为“政治风波”的这段历史，而是一再强调国家安全，高度戒备，加强了对政治敏感人物的严密监控，要求他们在六四敏感期噤声及中断与外界联系，甚至强迫一些异议人士外出旅游，同时加紧驱赶一些在北京的人权律师及其亲属，严重干扰了他们的正常生活和工作。```0
   ## 6/2/2023 - [美中关系恶化 北京为何奉马斯克为座上宾？](https://www.voachinese.com/a/musk-china-visit-20230601/7119766.html)
  ```特斯拉公司首席执行官埃隆·马斯克时隔三年后访问中国，受到北京高规格接待。分析认为，中国利用马斯克这样的国际商界领袖重塑自己的“开放”形象，而国际企业在急于维持中国市场的同时将不可避免地受到美中关系“逆风”的影响。```0
   ## 6/2/2023 - [中国对美光芯片的禁令将是美韩关系试金石](https://www.voachinese.com/a/china-s-micron-chips-ban-is-litmus-test-for-south-korea-20230601/7119776.html)
@@ -37,5 +39,3 @@
  ```随着中国国内需求疲软及公司盈利预期不佳导致中国和香港股市暴跌，外国投资者抛售中国股票的势头今年5月加速。```0
   ## 6/1/2023 - [英伟达CEO黄仁勋：依赖台湾生产高端芯片“完全安全”](https://www.voachinese.com/a/nvidia-ceo-feels-safe-relying-on-taiwan-for-chips-20230601/7118361.html)
  ```美国顶尖人工智能芯片和超算供应商英伟达（Nvidia）创办人兼首席执行官黄仁勋星期四（6月1日）表示，依赖台湾生产高端和先进人工智能等芯片仍“完全安全”。```0
-  ## 6/1/2023 - [福建舰甲板“裂痕”何来？专家：应为流水测试所致](https://www.voachinese.com/a/why-are-there-cracks-on-the-deck-of-china-s-fujian-ship-20230601/7118441.html)
- ```中国第三艘航母福建舰即将进行海试，但近来网络热议福建舰甲板疑似出现了两道明显的“裂痕”，引发中国航母是否为“豆腐渣”工程的疑虑。军事专家研判，这应是测试用的水流在甲板上的“砂道漆”所致，才会让“裂痕”看起来呈现不规则状甚至还会“移位”，福建舰甲板本身发生裂缝的机率应不高。```0
