--- a/新闻/自由亚洲电台亚太.md
+++ b/新闻/自由亚洲电台亚太.md
@@ -1,4 +1,6 @@
 
+  ## 6/2/2023 - [六四34周年 安保堪比二十大 异议人士被上岗或旅游](https://www.rfa.org/mandarin/yataibaodao/renquanfazhi/gt-06022023021308.html)
+ ```六四34周年日前夕，中国多地实施禁止民间集会的严控措施。北京异议人士查建国，六四伤残人士齐志勇被上岗，独立媒体人高瑜被带到河南旅游，成都秋雨教会信徒被公安“维稳”，贵州人权研讨会部分成员被旅游等。据说今年的六四维稳期约10日，其严厉程度堪比中共二十大安保。六四34周年日临近，北京、湖南、四川、安徽、湖北及贵州等地异议人士、人权组织或知名维权人士，被警方上岗或者强制旅游。据一位知情人士本周五（6月2日）告诉本台，北京独立媒体人高瑜被公安带到河南洛阳旅游：“高大姐被旅游了，在河南”。贵州一位日前接到公安警告，不得接受采访的异议人士告诉本台：“贵州人权研讨会的陈西、李任科、廖双元、黄燕明等十多名成员被上岗或者被带到贵阳郊区农家乐和度假村。国保像往年一样，待到六四周年日结束后，才能回到贵阳家中。”这位人士还说，两天前，北京异议人士查建国、何德普、江棋生，六四伤残者齐志勇等至少十人被上岗，八九学运参与者季风则被带到贵州省桐梓县旅游。正在贵州家乡的季风对本台证实，他被旅游期间不得接受媒体采访：“所有的媒体采访我，现在都被我拒绝。因为跟我打了招呼，不让我接受采访。我说我可不可以发照片，连照片都不能发。江棋生没消息，电话打不通。这就像二十大期间，绝对不能发照片。”合肥警方上门要带八九参与者沈良庆旅游另一位八九学运参与者，安徽合肥异议人士沈良庆告诉本台，当地公安已经通知他在六四周年日期间，须接受监控：“前几天，合肥市公安局国保支队和包河分局国保大队找我谈过话，说准备带我出去旅游，明天就要出去旅游。他们肯定会要求这几天不能谈六四话题。再有，我在旅游期间肯定是处在软禁状态。”湖南株洲多位接到公安警告的异议人士告诉本台，当局此次严控程度相当于中共二十大会议期间。其中一位陈先生说，警察周五早上刚到过他家：“他（国保）刚上我家来，才走了10分钟，因为六四这件事，说要来看守我，实施管控，可能持续到6月6日，我对此也没办法。我们这里不久前还拘留一个人叫陈思明，因为他在发推特（六四图片）。可能会被刑事拘留，因为他已被拘留4到5次了。”成都警方六四周年日与活跃人士“聚餐”在四川成都，当地异议人士宋先生告诉本台，四川环保作家谭作人，已被警方带走旅游，成都秋雨教会的多位活跃人士也被公安“打招呼”，在六四周年日当天，由警方安排“聚餐”。他说：“秋雨教会比较活跃的一些会友，这一、两天收到（国保）打招呼，我也接到电话，6月4日那一天，要被（国保）约出去吃个饭。谭作人每年六四都要被带出去旅游。”除了异议人士被监控，维权人士也被当局纳入控制范围。武汉维权人士周先生对本台说：“我们这些人虽然跟六四挂不上勾，但是现在六四异议人士该旅游的被旅游了。我们这些维权者也被国保当作所谓维稳的一部分。”每年的六四周年日，中国警方都会控制异议人士。有舆论认为，这是因为当局担心这些人士举行纪念活动或者发表相关言论，而这些活动和言论都被认为是对当局的挑战和批评。此外，中国政府一直试图掩盖、歪曲六四的真相，并禁止公民自由地表达对该事件的看法。因此，在这个敏感时期，警方会加强管控以维护政治秩序。记者古亭责编陈美华许书婷```0
   ## 6/1/2023 - [六四纪念馆召开揭幕记者会 　王丹：为未来储备动力](https://www.rfa.org/mandarin/yataibaodao/renquanfazhi/tj-06012023154632.html)
  ```由1989年天安门学运领袖筹建的六四纪念馆即将于6月2日在纽约曼哈顿开馆。为此，纪念馆筹备团队在本周四召开揭幕记者会。多位六四学运领袖在会上谈及创立纪念馆的意义以及对中国民主运动的展望。 专栏：六四34周年　纽约六四纪念馆展现什么？"六四"34周年　纪念馆凝聚两代人民主抗争精神 本周四，多位1989年天安门民主运动领袖在纽约曼哈顿召开了六四纪念馆揭幕记者会，王丹、周锋锁、当年的工人运动领袖吕京花等与会出席。王丹在会上表示，六四纪念馆会在纽约设立是因为香港当局在2021年关闭了在香港的六四纪念馆：“中国当局的意图很明显，他们想掩盖历史，让世界忘记中国当局犯的罪，他们希望大家忘记共产党是建立在暴力及谎言的政权。”王丹指出，透过六四纪念馆，让世人记住1989年的天安门民主运动是件相当重要的事：“1989年是中国近代历史最重要的转折点，比较1989年之前以及过后，会发现中国是两个完全不同的国家。……六四在中国至今依旧是很敏感的话题，它代表着政治反动，我们要维持这股反对力量，并为未来储备动力。纪念六四不仅是为了我们，也是为了中国；不只是为了过去，也是为了未来。”周锋锁：纪念馆展品很多来自六四参与者周锋锁也谈到，纪念馆象征着1989年民主运动世代以及“白纸运动”年轻世代对于民主中国的渴望：“我们抱有希望，不管我们如何被打败，也无论我们还要经过什么样的难关，民主中国的梦一直都存在。我们会团结在一起，就像34年前在天安门广场一样，全世界的人都看到我们对自由中国的梦想。”周锋锁指出，纪念馆中的文物很多是来自六四运动参与者的捐赠：“长期以来，我都在援助因为六四被关押的政治犯，很多人都因为1989年的民运被中国当局起诉，所以我们组建了信息联络网，这也是为何这些展品会到我这边。这些参与者希望这些展品能被展示、保存，同时他们也希望身份能被保护。”六四纪念馆馆长于大海向本台介绍馆藏文物（记者唐缘媛摄）现场众多年轻志愿者　王丹：大家都有自由中国梦在纪念馆的会场中，有众多年轻人参与筹备工作，当中不乏有仍打算回国的中国留学生。针对有关这些青年人是受到什么样的鼓舞，才愿意冒着被中国当局秋后算帐的风险前往纪念馆帮忙的问题，王丹解释道：“我们两代人分享着一样的价值观，我们都希望中国可以变民主。很多的年轻志愿者来自‘白纸运动’世代，但我们分享着同样的梦想，这就是为什么他们参与纪念馆的活动。”推特充斥六四纪念馆假帐号　王丹：面对网军已有所准备在六四纪念馆开幕前夕，社群平台推特上出现大量六四纪念馆的虚假帐号，并试图骗取支持者捐款。王丹就此接受本台记者采访表示，他们对于中国网军的攻击、威胁已有所准备，并没有特别忧心。王丹说：“被网军骚扰和在未来可能遇到一些麻烦，这都是预料之中的。这样的一个纪念馆显然会是中共及中共驻外使领馆的眼中钉、肉中刺，这个是完全可以理解的，但是我们也有做相应的准备。坦率讲，如果有人来捣乱的话，我敢保证他马上会被FBI（美国联邦调查局）发现。我们跟相关单位有做一定的准备，美国政府对此也是了解的。” 记者：唐缘媛   责编：何平   网编：洪伟```0
   ## 6/1/2023 - [又逢儿童节  中国流动人口子女状况惹关注](https://www.rfa.org/mandarin/yataibaodao/shehui/wy-06012023141816.html)
@@ -27,5 +29,3 @@
  ```六四事件34周年前夕，台湾剧团重演在香港无法公演的六四舞台剧《5月35日》，六场票房全满。主办单位相信，随着中国对台湾及世界的威胁和影响在扩大，以六四事件为主题的舞台剧会更有吸引力。 香港数百位基督教牧者信徒联署《六四34周年纪念祷文》【我是怎么知道六四的】来信节选 国际特赦组织台湾分会与台湾的"晓剧场"合作，在六四34周年前夕，重演以天安门难属为主题，讲述遇难学生母亲临终前，想到天安门广场拜祭儿子故事的六四舞台剧《5月35日》。国际特赦组织台湾分会秘书长邱伊翎表示，去年在台湾播放港版《5月35日》影片，引起回响大，已有构思在台重演的计划，今年计划公演共六场，全部爆满，反应比去年更佳，相信是随着中国对全球威胁越大，使更多人关注中国和香港人权主题。邱伊翎："我们不是只在讲六四，而是会去谈更多更广泛的人权议题，李明哲的事件、富察和杨智渊等，有越来越多的人，他们入境中国或者香港，可能就会面临到人身安全的危险。在国安法实施之后，中国政府在不断要扩大法律的管辖权，可以逮捕更多外国人，甚至包括台湾人，即使不入境中国跟香港，在欧洲或其他国家，你可能也都会被中国政府要求，送到中国去接受法律的审判，越来越多的人可以去感同身受，不可能是跟我没有关系的。"国际特赦组织台湾分会秘书长邱伊翎表示，在台重演《5月35日》反应佳与随着中国对全球威胁越大有关。（记者李宗翰摄）台重演《5月35日》舞台剧反应佳与中国对全球威胁升高有关邱伊翎表示，以往在台湾，主要是人权团体关注六四事件和中国人权状况，希望重演谈六四的舞台剧故事，能吸引很少接触中国敏感政治话题的台湾人的关注。邱伊翎："中国的人权议题，其实并不是我们自己关起门来不去管它，它就不会影响到我们。事实上，它会影响到整个区域，甚至是全球的人权的现况。一般的老百姓完全不碰政治，但是可能在他的日常生活中，他还是会去面临到家人或亲友，都会用各种方式和理由，限制他有什么话该讲，有什么话不该讲，或可不可以去悼念。对自由的压迫和管控，其实是无所不在的。"她表示，在找寻剧场合作时，没有剧团因为《香港国安法》的风险而拒绝，但会特别安排广东话读白的香港表演者配戴面具。台版《5月35日》导演锺伯渊表示，自由价更高，甘愿为《5月35日》放弃在中港的合作计划。（记者李宗翰摄）台版《5月35日》导演：自由价更高甘愿放弃在中港的合作"晓剧场"兼台版《5月35日》导演锺伯渊表示，决定参与计划时，已考虑可能不能再到香港。他表示，有如此决心，与他不只一次体会大陆对自由的打压有关，2020年台湾大选投票日前夕，在澳门被查问的经验，让他更珍惜自由的可贵。锺伯渊："护照上面我有贴'RepublicofTaiwan'，一直以来去在各国，都没有遇到有人要求我把它撕掉。2020年当我到澳门的时候，就被带进小房间里面质问，要我把它撕掉，他们就放行我。隔天晚上我再回来台湾，看到我的朋友时，我就哭出来了。其实你会很恐惧，你不敢跟任何人说的恐惧感，状况比你想象中还要严重。在那次的经验之后，我认为自由是很重要的，我希望持续的去彰显永远都可以发出来的声音，而不要封闭我自己说话的权利。好像现在不能去香港了，那我就先不要了。"台湾重演在香港无法再公演的六四舞台剧《5月35日》（受访者提供）台版《5月35日》将加入台湾和香港的抗争元素虽然六四事件已发生34年，但锺伯渊认为，《5月35日》通过遇难者母亲"小林"，充份表达天安门难属多年来被打压的情况和伤痛，又说，六四事件既是历史，也能反映当代的人权情况，在台公演的版本，除了谈六四，也加入台湾和香港的抗争历史元素。锺伯渊："这次演出我们要模糊那个界线，'小林'听的台语歌，是台语禁歌，会牵涉到228事件的时候，白色恐怖的台语禁歌。观众会在舞台上面看到一把折烂的伞，代表曾经有过的“雨伞革命”；花瓶里有一束枯掉的太阳花等等，所有关于抗争的意象，都会在舞台上呈现，利用当代这些历史融合戏里面来，它不只是一个单一的，或许透过这个故事，也可以让观众思考，我要经济挂帅，还是要人权挂帅。"演遇难学生母亲"小林"的表演者梁德翔表示，理解这次表演的题材敏感，但强调，作为演员，不是要做政治抗争，只是想呈现母亲对儿子的爱，没有因安全和不能再入境香港等问题影响演出。 记者：陈子非、淳音   责编：许书婷、嘉远   网编：洪伟```0
   ## 5/31/2023 - [中国五月PMI48.8%仍在荣枯线下　产需两端都放缓](https://www.rfa.org/mandarin/yataibaodao/jingmao/hcm2-05312023103930.html)
  ```中国5月31日公布5月份的制造业PMI为48.8%，比上月下降0.4个百分点，仍继续在荣枯线下小幅回落。5月份的生产指数和新订单指数也呈现微幅下滑。统计数据显示，产需两端有所放缓。 中国制造业PMI降至荣枯线以下百强房企销售下滑中国经济复苏艰难　制造业势头放缓 中国国家统计局5月份公布，中国制造业采购经理指数、非制造业商务活动指数和综合PMI产出指数分别为48.8%、54.5%和52.9%，低于上月0.4、1.9和1.5个百分点。“中国经济景气水平有所回落，恢复发展基础仍需巩固”。中国统计局进一步分析制造业采购经理指数小幅回落原因指出，首先，产需两端有所放缓，生产指数和新订单指数分别为49.6%和48.3%，比上月下降0.6和0.5个百分点，“制造业市场需求仍显不足，企业产能释放受到抑制”。其次，价格指数持续回落。受近期部分大宗商品价格持续下行、市场需求偏弱等因素影响，包括石油煤炭以及化学原料等制品的价格指数都低于31%，行业上下游市场活跃度不高。第三，大型企业PMI为50.0%升至临界点，但中小企业景气度都在荣枯线下，依然较弱。另一方面，5月份非制造业商务活动指数为54.5%，虽然低于上月1.9个百分点，但统计局解读，今年以来始终保持在54.0%以上景气区间，非制造业延续恢复性增长，服务业稳步恢复、建筑业高位回调。新浪财经特约分析师张立群解读周三公布的数据，“表明经济全面回升态势仍在聚力之中。”他分析，订单类指数继续小幅回落，反映市场需求不足的企业占比进一步提高到58%以上，表明需求收缩的问题仍然突出。受此影响，企业信心仍然偏弱，生产经营活动偏谨慎；需求不足也引致价格类指数回落。中国国家统计局五月份公布的中国制造业采购经理指数（网络截图/黄春梅提供）中国景气"弱复苏"恐待七月政治局会议开解方国际铜价近期跌破八千美元整数关卡，由于中国经济复苏乏力，作为经济风向标的大宗商品铜价触及去年十一月以来的低点。有媒体解读，因一连串经济数据显示中国的景气回温停滞，而中国并未祭出大规模支出投资基础建设，再加上中国房地产景气仍低档徘徊，冲击市场信心。第一财经分析，五月以来公布的一连串经济数据不及预期，市场连日上演股、汇双杀，指出“中国经济复苏的第一阶段基本完成，而第二阶段的复苏仍弱于预期，外加地缘政治博弈，因而也可能引发获利了结”。新浪财经有关如何看“强预期”与“弱复苏”的一篇文章指出，目前经济的结构问题集中在三方面，一是上游和下游库存水平还比较高；二是复苏链条短，拉动作用不大，生活和商旅服务的修复对经济拉动链条短，在收入循环恢复的需要过程，在这个过程中可能出现经济环比减弱的情况；三是居民企业加杠杆的意愿不强。“经济未来一个季度可能很难继续走强”。文章分析，变局节点最快需要观察今年七月的政治局会议。更有可能是在地方财政或者就业等其它宏观压力催化下，才会带动总量政策增量。 记者：黄春梅   责编：许书婷、梒青   网编：洪伟```0
-  ## 5/31/2023 - [中国实施美光禁令　韩国半导体处境尴尬](https://www.rfa.org/mandarin/yataibaodao/jingmao/zbt-05312023094002.html)
- ```5月下旬，中国以没有通过安全审查为由，对美国的美光芯片实施制裁后，韩国半导体企业陷入了尴尬状态。一方面，美国要求韩国不要试图在中国填补美光留下的空白，另一方面，面对韩国国内经济的不景气，一些经济评论人士认为美国的要求违背市场原则，韩国应该占领这个市场。 中国说美国美光芯片不安全美光在中国被禁后　投资三十六亿美元日本设厂美商务部长：美国“不会容忍”中国对美光芯片的禁令 5月下旬，中国以没有通过安全审查为由，对美国的美光芯片实施制裁后，韩国半导体产业陷入了尴尬状态，这也引发了国内外媒体的大讨论。美光禁令引发的韩国尴尬局面一方面，美国要求韩国不要试图在中国填补美光留下的空白，28日，彭博社援引消息人士的话报道称：“韩国政府也不会鼓励三星电子和SK海力士等企业利用美光空白来增加在中国市场的占有率”。韩国经济评论人士金养鹏（音）认为：“韩国的半导体技术和设备有赖于美国，从技术长期发展的角度来看，不应该违背美国的意愿，而且美光的中国市场占有率并不高，即使韩国的企业占领了这个空白，对韩国经济发展帮助也不会很大。”面对媒体的喧嚣,韩国半导体企业陷入了尴尬的境地，三星电子和SK海力士谨慎地表示:“还没有正式立场。”另一方面，面对韩国国内经济的不景气，一些经济评论人士认为美国的要求违背了市场原则，韩国应该占领这个空白。29日，《环球时报》（英文版）通过专栏也表示:“韩国的半导体企业在中国市场上填补美光的空白是理所当然的，韩国应该做出实用的选择，否则，韩国经济前景将极度堪忧。”韩国经济评论人士朴淑娴（音）认为：“韩国和美国是盟国，因此韩美关系不可能有大的变动，但这并不意味着韩美在所以利益关系上都是一致的。事实上，国与国在经济利益关系上很复杂的，比如，同为美国盟友的荷兰和日本在半导体出口中国的问题上一直都是犹豫不定，甚至美国也在寻求解决半导体出口中国的办法。中国制裁美光，这是韩国企业的一个机会。” 三星电子公司设在平澤市的芯片制造厂区，摄于2022年9月7日。(路透社资料图片)  韩国还是面临一个选边站的问题中美进入竞争和对立状态以来，韩国一直面临选边站的问题。韩国保守派领导人尹锡悦上任一年以来，通过加入“芯片四方联盟”、“印太经济繁荣框架”，以及访日、访美，尤其是5月份列席七国集团首脑峰会，这被国际社会认为是标志着完全倒向了美国一边。但这次中国制裁美光事件充分暴露出韩国在经济上还做不到一边倒地投向美国。韩国时评人宋虎营（音）认为：“现在的经济和外交状态下，无论是就人口规模还是地理位置而言，如果我们断绝了和周边国家，特别是中国的进出口往来，恐怕我们连两个星期都坚持不了就得倒下。韩国和日本、美国走得太近了，这种偏向性外交是让人担心的事。在中美竞争背景下，韩国的力量还很有限，我们没必要替美国出头，因为背后指使我们的美国和日本也都有自己的打算，在这种情况下，我们为什么要当面和中国作对，从而丧失了大好的机会呢？” 一位半导体业界的相关人士表示:“半导体已经超越了单纯的产业界层面,成为了政治冲突的对象。从企业的立场来看,只能观察情况,寻找最大限度地有利可图。” 记者：柏涛  责编：嘉远  网编：何足```0
