--- a/新闻/德国之声.md
+++ b/新闻/德国之声.md
@@ -1,4 +1,6 @@
 
+  ## 6/2/2023 - [香港抹去六四記憶 文物保存寄望海外](https://www.dw.com/zh/香港抹去六四記憶-文物保存寄望海外/a-65801167?maca=chi-rss-chi-all-1127-rdf)
+ ```天安門事件將屆34週年之際，「六四紀念館」在紐約開幕。在香港當局系統性抹去這場大屠殺記憶的此刻，專家告訴DW，海外的紀念活動將延續香港的傳統，也代表人們對自由和民主的渴望不會那麼容易被澆熄。```0
   ## 6/2/2023 - [美國債務上限法案在參議院過關](https://www.dw.com/zh/美國債務上限法案在參議院過關/a-65760918?maca=chi-rss-chi-all-1127-rdf)
  ```為了在6月5日的違約最後期限之前讓法案過關，美國國會在跟時間賽跑，最後終於在週四通過法案，可送交美國總統拜登簽署。```0
   ## 6/2/2023 - [馬斯克訪華成中國焦點 傳曾經會晤丁薛祥](https://www.dw.com/zh/馬斯克訪華成中國焦點-傳曾經會晤丁薛祥/a-65789014?maca=chi-rss-chi-all-1127-rdf)
@@ -35,8 +37,6 @@
  ```一名前紐約市警官被指控為中國特務，涉嫌恐嚇在美國的「中國逃犯」，試圖脅迫他們返回中國。美國週三在紐約針對涉及中國「獵狐行動」的此案，展開首次聯邦審判。```0
   ## 6/1/2023 - [涉嫌行賄 包凡拘留期遭延長3個月](https://www.dw.com/zh/涉嫌行賄-包凡拘留期遭延長3個月/a-65787901?maca=chi-rss-chi-all-1127-rdf)
  ```今年2月失蹤的中國華興資本董事長包凡，日前傳出拘留期遭延長三個月，跟其相關的華興資本香港證券子公司董事長叢林，拘留期也遭到繼續延長。```0
-  ## 5/31/2023 - [科索沃冲突发酵 塞族不愿“被代表”](https://www.dw.com/zh/科索沃冲突发酵-塞族不愿-被代表/a-65784705?maca=chi-rss-chi-all-1127-rdf)
- ```欧盟和美国对科索沃当局无视其北部塞族居民的诉求、强推选举引发抗议冲突提出了批评。本周塞族人与当地警方及维和部队之间的冲突造成数十人受伤。```0
   ## 5/31/2023 - [德语媒体：北京拒绝中美防长对话](https://www.dw.com/zh/德语媒体：北京拒绝中美防长对话/a-65784653?maca=chi-rss-chi-all-1127-rdf)
  ```中美关系不断紧张化之际，华盛顿方面非常希望中美两国防长能够在新加坡香格里拉对话期间举行会晤。但中国方面已经明确表示，目前并不具备中美双方开展平等对话的条件。```0
   ## 5/31/2023 - [美商务部去年拒绝四分之一出口中国的许可证申请](https://www.dw.com/zh/美商务部去年拒绝四分之一出口中国的许可证申请/a-65783582?maca=chi-rss-chi-all-1127-rdf)
