--- a/新闻/德国之声.md
+++ b/新闻/德国之声.md
@@ -1,4 +1,6 @@
 
+  ## 6/2/2023 - [報告：中國投資開源情報 蒐集美軍資訊](https://www.dw.com/zh/報告：中國投資開源情報-蒐集美軍資訊/a-65801428?maca=chi-rss-chi-all-1127-rdf)
+ ```一家美國情報公司的分析指出，中國官方和解放軍正在美國國防部、智庫和私營企業的公開數據，藉此更了解美軍的能力，其中也包含涉及跟台灣有關的防衛資訊。```0
   ## 6/2/2023 - [香港抹去六四記憶 文物保存寄望海外](https://www.dw.com/zh/香港抹去六四記憶-文物保存寄望海外/a-65801167?maca=chi-rss-chi-all-1127-rdf)
  ```天安門事件將屆34週年之際，「六四紀念館」在紐約開幕。在香港當局系統性抹去這場大屠殺記憶的此刻，專家告訴DW，海外的紀念活動將延續香港的傳統，也代表人們對自由和民主的渴望不會那麼容易被澆熄。```0
   ## 6/2/2023 - [美國債務上限法案在參議院過關](https://www.dw.com/zh/美國債務上限法案在參議院過關/a-65760918?maca=chi-rss-chi-all-1127-rdf)
