--- a/新闻/法国国际广播电台.md
+++ b/新闻/法国国际广播电台.md
@@ -1,4 +1,6 @@
 
+  ## 6/2/2023 - [海内外抗遗忘：许志永狱中吁「六四禁食」 新纪念馆美国今开幕延「六四」记忆](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20230602-%E6%B5%B7%E5%86%85%E5%A4%96%E6%8A%97%E9%81%97%E5%BF%98-%E8%AE%B8%E5%BF%97%E6%B0%B8%E7%8B%B1%E4%B8%AD%E5%90%81-%E5%85%AD%E5%9B%9B%E7%A6%81%E9%A3%9F-%E6%96%B0%E7%BA%AA%E5%BF%B5%E9%A6%86%E7%BE%8E%E5%9B%BD%E4%BB%8A%E5%BC%80%E5%B9%95%E5%BB%B6-%E5%85%AD%E5%9B%9B-%E8%AE%B0%E5%BF%86)
+ ```后天是「六四事件」34周年纪念日，在香港因打压而难以公开悼念之际，海内外均出现抗拒遗忘的行动：六四纪念馆在香港的被迫关闭后不足两年，重建的新馆今天在美国纽约开幕；上月因「颠覆国家政权罪」判囚14年的维权律师许志永透过管道向外界传递讯息，表示「六四」会在狱中继续悼念：「我会禁食一天，这是不可遏制的纪念……即使身陷囹圄依然可以坚持。」他更呼吁其他人当日一起禁食，以纪念先辈的牺牲和筑起华夏新民族精神。```0
   ## 6/2/2023 - [拜登：美国不寻求与中国发生冲突或对抗，但准备好迎接激烈竞争](https://www.rfi.fr/cn/%E4%B8%93%E6%A0%8F%E6%A3%80%E7%B4%A2/%E8%A6%81%E9%97%BB%E5%88%86%E6%9E%90/20230602-%E6%8B%9C%E7%99%BB-%E7%BE%8E%E5%9B%BD%E5%B9%B6%E4%B8%8D%E5%AF%BB%E6%B1%82%E4%B8%8E%E4%B8%AD%E5%9B%BD%E5%8F%91%E7%94%9F%E5%86%B2%E7%AA%81%E6%88%96%E5%AF%B9%E6%8A%97)
  ```美国国防部长奥斯汀（LloydAustin）周四在日本访问时再次呼吁，“欢迎任何机会”与中国军方领导人接触。他在东京出席记者会时表示，中方拒绝了由美方提出在周末新加坡香格里拉对话会期间举行两国防长会议的提议是“不幸的”。奥斯汀指出，双方持续缺乏沟通或将导致“一个可能非常、非常迅速地失去控制的事件”。```0
   ## 6/1/2023 - [法乌总统指示两国防长就培训乌克兰飞行员制定多国机制](https://www.rfi.fr/cn/%E5%9B%BD%E9%99%85/20230601-%E6%B3%95%E4%B9%8C%E6%80%BB%E7%BB%9F%E6%8C%87%E7%A4%BA%E4%B8%A4%E5%9B%BD%E9%98%B2%E9%95%BF%E5%B0%B1%E5%9F%B9%E8%AE%AD%E4%B9%8C%E5%85%8B%E5%85%B0%E9%A3%9E%E8%A1%8C%E5%91%98%E5%88%B6%E5%AE%9A%E6%AD%A3%E5%BC%8F%E6%9C%BA%E5%88%B6)
@@ -57,5 +59,3 @@
  ```5月31日，法国总统马克龙（EmmanuelMacron）受斯洛伐克总统恰普托娃（ZuzanaČaputová）之邀访问该国，并出席了由斯洛伐克智库主办的2023年“全球安全”布拉迪斯拉发论坛。马克龙当天向大会发表讲话，并就俄罗斯入侵乌克兰战争，法国对中东欧国家的政策及欧盟内部团结等系列话题发表了“历史性”讲话。```0
   ## 5/31/2023 - [美国宣布向乌克兰提供新一轮总值3亿美元军事援助](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20230531-%E7%BE%8E%E5%9B%BD%E5%AE%A3%E5%B8%83%E5%90%91%E4%B9%8C%E5%85%8B%E5%85%B0%E6%8F%90%E4%BE%9B%E6%96%B0%E4%B8%80%E8%BD%AE%E6%80%BB%E5%80%BC3%E4%BA%BF%E7%BE%8E%E5%85%83%E5%86%9B%E4%BA%8B%E6%8F%B4%E5%8A%A9)
  ```美国周三(5月31日）宣布，向乌克兰提供新一轮总值3亿美元的军事援助，其中主要包括爱国者防空系统的导弹。乌克兰总理周三表示，作为世界银行行政能力持久性公共支出计划（PEACE）的一部分，基辅已从美国收到12.5亿美元的资金。```0
-  ## 5/31/2023 - [中美南海军机事件：布林肯呼吁北京加强与华盛顿沟通](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20230531-%E4%B8%AD%E7%BE%8E%E5%8D%97%E6%B5%B7%E5%86%9B%E6%9C%BA%E4%BA%8B%E4%BB%B6-%E5%B8%83%E6%9E%97%E8%82%AF%E5%91%BC%E5%90%81%E5%8C%97%E4%BA%AC%E5%8A%A0%E5%BC%BA%E4%B8%8E%E5%8D%8E%E7%9B%9B%E9%A1%BF%E6%B2%9F%E9%80%9A)
- ```针对中国军机上周在南海上空拦截美国侦察机，美国国务卿布林肯周三(5月31日）呼吁北京加强与华盛顿的沟通；布林肯并将此事件归咎于中方飞行员。布林肯并对美中防长未能会晤表示遗憾。```0
