--- a/新闻/自由亚洲电台亚太.md
+++ b/新闻/自由亚洲电台亚太.md
@@ -1,4 +1,6 @@
 
+  ## 6/2/2023 - [天安门难属坚持六四祭至亲 香港前支联会成员变通悼六四](https://www.rfa.org/mandarin/yataibaodao/renquanfazhi/ec-06022023035917.html)
+ ```本周日是六四事件34周年，天安门母亲发言人尤维洁表示，当天惨况无法忘怀，坚持争取至真相大白方休。另外，《国安法》使香港不能再举办六四纪念活动，支联会的前常委和义工，各自以不同的方法，守护这段被变成敏感词的历史。还有2天是六四屠杀34周年，"天安门母亲"发言人尤维洁对本台表示，每年这段时间，她都会想起六四当天的情况。尤维洁："我是一个遇难者的亲属，我的心情一到这个时候是不会很舒畅的，因为当年六四惨案，我所看到的，在首都北京十里长安街上，动用军队屠杀平民百姓这一举动，太令人震惊了。我在医院里头各种各样的情景，依然就像发生在昨天的事情一样，历历在目，在我心里头一点一滴，我都没有忘记。"尤维洁表示，本周日是疫情后的首个六四忌日，家属们会坚持到万安公墓祭奠和发表祭文，表达对家人的哀思。她表示，"天安门母亲"发起人丁子霖和张先玲，身体状况还好，但不少成员正与时间竞赛，希望能争取"真相、赔偿和问责"的三大诉求尽快实现。尤维洁："有很多的当年失去儿女的母亲、父亲们，年纪都在八十岁以上，会有一些老年病，这是我们也很担忧的一件事，我们都很希望他们在能在有生之年，能看到六四惨案被公诸于世，能够得到解决，能够安慰他们非常痛苦的心。"对于今年全球多地都有六四的悼念活动，尤维洁感谢大家对六四惨案的关注，也感谢已解散的香港支联会，为悼念留下30多年的烛光。支联会前副主席蔡耀昌：支联会虽解散人民不会忘记在《国安法》实施后，支联会解散，多名前常委先后被起诉，前副主席蔡耀昌也曾因为六四集会被判刑。他相信，他与坚持多年的支联会成员，以及无数曾举起烛光悼念的港人，都不会因为没有晚会而忘记六四。蔡耀昌："不会像过去三十年，每年都有大型的集会，不过，支联会从1989到2019的30年，我们至少能做到，使六四的议题没有被消失，我相信有很多香港人都清楚知道，89年的六四发生过什么事，相信香港人会用自己的方法，继续表达自己的看法，人民不会忘记。"对于今年六四期间，香港维园会变身成亲中社团举办庆回归的市集，港府高层更提早放话，警告不要利用"特别日子"做危害国家的行为。蔡耀昌认为，港府的反应过大。蔡耀昌："我当然不明白有关的社团组织为何要在六四前后，在维园办市集？是否有政治目的，可能要他们自己解答。我明白现在的政治环境已改变，但大多数的港人，不会想搞乱香港和危害国家安全，太多的上纲上线，对香港以至整个中国都不是好事。"蔡耀昌表示，六四当晚会在私人地方静默悼念，相信身陷囹圄的多名支联前骨干，也会用自己的方法，纪念这段悲痛的历史。六四剧本编录成书三语出版编者列明慧：尽普通人力量守护真相"六四舞台"主席列明慧选择以文字和艺术，记载六四和香港的故事。她接受本台访问表示，舞台剧《5月35日》从首演到无法公演，是香港《国安法》的历史见证。在六四34周年前夕，她把这出记载时代的舞台剧本，编成广东话、国语和英语三种语言。在台湾版的剧本，希望把六四和香港的故事延续，在记忆与遗忘战中，尽小市民的一份力量。列明慧："有《国安法》后，很多离散的港人经常在想，我们还可以做什么？在有些事可能会被官方抹去痕迹，我们除了自己要记着之外，也要把这些历史留存下来，我们要做很多的记录，例如我们的剧本，剧本的书在香港不能出版，我们去台湾印，在香港无法演，我们去其他地方和用不同的语言去演，这些都是我们能做到的抗争方式。"列明慧表示，艺术有力量让不同地方的人了解不公义的事，不仅发生在1989年的6月4日，以及天安门母亲等难属身上。她期望三语剧本集，能使《5月35日》在全球不同地方，通过不同的语言公演，提高当地人对六四和香港的认识，再了解香港现在所经历的困难。"记者：陈子非责编陈美华许书婷```0
   ## 6/2/2023 - [六四34周年 安保堪比二十大 异议人士被上岗或旅游](https://www.rfa.org/mandarin/yataibaodao/renquanfazhi/gt-06022023021308.html)
  ```六四34周年日前夕，中国多地实施禁止民间集会的严控措施。北京异议人士查建国，六四伤残人士齐志勇被上岗，独立媒体人高瑜被带到河南旅游，成都秋雨教会信徒被公安“维稳”，贵州人权研讨会部分成员被旅游等。据说今年的六四维稳期约10日，其严厉程度堪比中共二十大安保。六四34周年日临近，北京、湖南、四川、安徽、湖北及贵州等地异议人士、人权组织或知名维权人士，被警方上岗或者强制旅游。据一位知情人士本周五（6月2日）告诉本台，北京独立媒体人高瑜被公安带到河南洛阳旅游：“高大姐被旅游了，在河南”。贵州一位日前接到公安警告，不得接受采访的异议人士告诉本台：“贵州人权研讨会的陈西、李任科、廖双元、黄燕明等十多名成员被上岗或者被带到贵阳郊区农家乐和度假村。国保像往年一样，待到六四周年日结束后，才能回到贵阳家中。”这位人士还说，两天前，北京异议人士查建国、何德普、江棋生，六四伤残者齐志勇等至少十人被上岗，八九学运参与者季风则被带到贵州省桐梓县旅游。正在贵州家乡的季风对本台证实，他被旅游期间不得接受媒体采访：“所有的媒体采访我，现在都被我拒绝。因为跟我打了招呼，不让我接受采访。我说我可不可以发照片，连照片都不能发。江棋生没消息，电话打不通。这就像二十大期间，绝对不能发照片。”合肥警方上门要带八九参与者沈良庆旅游另一位八九学运参与者，安徽合肥异议人士沈良庆告诉本台，当地公安已经通知他在六四周年日期间，须接受监控：“前几天，合肥市公安局国保支队和包河分局国保大队找我谈过话，说准备带我出去旅游，明天就要出去旅游。他们肯定会要求这几天不能谈六四话题。再有，我在旅游期间肯定是处在软禁状态。”湖南株洲多位接到公安警告的异议人士告诉本台，当局此次严控程度相当于中共二十大会议期间。其中一位陈先生说，警察周五早上刚到过他家：“他（国保）刚上我家来，才走了10分钟，因为六四这件事，说要来看守我，实施管控，可能持续到6月6日，我对此也没办法。我们这里不久前还拘留一个人叫陈思明，因为他在发推特（六四图片）。可能会被刑事拘留，因为他已被拘留4到5次了。”成都警方六四周年日与活跃人士“聚餐”在四川成都，当地异议人士宋先生告诉本台，四川环保作家谭作人，已被警方带走旅游，成都秋雨教会的多位活跃人士也被公安“打招呼”，在六四周年日当天，由警方安排“聚餐”。他说：“秋雨教会比较活跃的一些会友，这一、两天收到（国保）打招呼，我也接到电话，6月4日那一天，要被（国保）约出去吃个饭。谭作人每年六四都要被带出去旅游。”除了异议人士被监控，维权人士也被当局纳入控制范围。武汉维权人士周先生对本台说：“我们这些人虽然跟六四挂不上勾，但是现在六四异议人士该旅游的被旅游了。我们这些维权者也被国保当作所谓维稳的一部分。”每年的六四周年日，中国警方都会控制异议人士。有舆论认为，这是因为当局担心这些人士举行纪念活动或者发表相关言论，而这些活动和言论都被认为是对当局的挑战和批评。此外，中国政府一直试图掩盖、歪曲六四的真相，并禁止公民自由地表达对该事件的看法。因此，在这个敏感时期，警方会加强管控以维护政治秩序。记者古亭责编陈美华许书婷```0
   ## 6/1/2023 - [六四纪念馆召开揭幕记者会 　王丹：为未来储备动力](https://www.rfa.org/mandarin/yataibaodao/renquanfazhi/tj-06012023154632.html)
@@ -27,5 +29,3 @@
  ```在台湾出生、顶着"一兆男"身价返台掀AI热潮的英伟达（NVIDIA）共同创办人黄仁勋（JensenHuang）投资逾四十亿人民币在台湾"养人才"刮起旋风，未来一周內黄仁勋将访问中国。 台积电是"兵家必争之地"  张忠谋：现在更是如此中资企业在台高薪招揽芯片研发人才遭调查 全球最大独立绘图芯片（GPU）供应商、美商英伟达（台湾翻译“辉达”）共同创办人兼执行长黄仁勋近日访台刮起旋风。英伟达与台湾大学宣布合作成立AI研发中心，新聘1000名员工，并与大学合作培育人才。台湾经济部表示，2021年通过英伟达申请人工智慧创新研发中心计划，总经费约新台币243亿元（约56亿人民币），经济部补助67亿元（约15亿人民币），英伟达自筹约176亿元（约40多亿人民币）。一头白发、身穿黑皮衣的黄仁勋，在台湾大学毕业典礼致词鼓励朝梦想奔跑，“别用走的”、要成为“猎食者，不是被猎食者”等名句，在台北电脑展以四句话令AI秒编成曲，逛夜市买麻花卷，和在街头向两直播女歌手点播女神卡卡（LadyGaga）《捍卫战士》主题曲、一名小哥在餐厅巧遇黄仁勋、临时去买显卡要签名等新闻，在中国微博引发热议。中国网民更多关注黄仁勋30日出席全球媒体与分析师问答会，对外界关切美国政府早前禁止英伟达及超微（AMD）先进芯片销售至中国一事，台湾中央社引述黄仁勋表示，中国有最好的云端服务和消费者互动服务，数位支付也相当进步，电动车市场快速发展。无论美国对中国监管情况如何，中国政府会利用这次机会积极扶植在地化芯片产业发展。英伟达共同创办人黄仁勋访台言行在中国微博引发热议（微博截图）学者：中国缺乏高阶芯片阻碍GPU发展台湾经济研究院产经资料库总监刘佩真接受自由亚洲电台采访表示，黄仁勋是站在商业利益喊话，连英特尔都很难赶上，中芯国际止步在14奈米制成，英伟达明年也许就会采取3奈米制程，中国缺乏先进芯片，三、五年内要超越英伟达GPU霸主地位很难。刘佩真说：“台积电也不可能会帮他代工，也不能帮他代工，三星我想也不会，英特尔也不敢去帮中国作先进制程上的代工。中国即便GPU在三至五年做出来，还是要有相对应先进制程帮他制造，他必须要有一个生态系的产业链的配合。英伟达耕耘GPU相当久，周边生态系也已相当庞大，短期其他竞争者很难去比拟。”台湾国防安全研究院助理研究员王绣雯接受自由亚洲电台采访分析，英伟达、超微（AMD）、英特尔等美商和中国业者合作密切，美方制裁会令美企感到痛！虽然中国还无法量产7奈米以下芯片，短期被甩在后面，可是中国一直在想办法突破这难关。王绣雯说：“比如以各种不同的非最先进晶片如14奈米、18奈米、12奈米，组合起来，用小芯片封装技术组装，希望能追到英伟达最先进处理器，但这要花很大成本跟时间。现在中国大陆正在试这个事情，所以黄仁勋才会很着急，因为他会担心他的一个处理器都卖这么贵，万一中国大陆能用比较便宜的方法，用组合的，也不用最先进的东西能追到他的话，对他的市场可能丧失很大。”英伟达共同创办人黄仁勋访台言行在中国微博引发热议（微博截图）英伟达“降速版”芯片销中国规避美禁令美国政府在去年（2022）8月26日针对超微与英伟达的图形处理器（GPU）祭出出口限制，要求出口相关产品至中国（含香港）与俄罗斯之前，必须取得许可，以避免相关GPU被部署在军事用途上，该禁令有1年的缓冲期。刘佩真指出，黄仁勋应该是看到缓冲期快到了，向美国政府提出呼吁。“针对中国市场，英伟达以降规推出相关芯片以符合美国的法规，输往中国作为替代方案，端视未来美国政府会不会持续对降规生产这部份有些管制？”据综合报导，被美方禁止出货中国的是英伟达Ａ100、Ｈ100的GPU芯片，对开发ChatGPT这类生成式AI技术至关重要。A100是台积电7奈米制程，用于加速AI、资料分析和高效能运算作业。英伟达今年三月证实销售中国的Ｈ800，已获阿里巴巴、腾讯、百度等中国云端业者采用。外媒报导比Ｈ100降速约一半。王绣雯说，有中国业者反应“降级版”仍很有帮助。如果美国政府发现降级版仍有助中国大陆研发导弹、超高音速武器，可能还是会禁止。一些美商因此在中国采取入股或投资设公司，以避免受限美国禁令。王绣雯提到，2020、2021全球前五名ＡＩ伺服器，中国浪潮集团、华为、联想都在列。中国ＡＩ伺服器云端、终端，都会需要大量ＡＩ芯片，英伟达看好起码2025年前后都有非常好的前景。如果只能销中国降级版芯片，对生意有很大影响。美国半导体产业协会(SIA)近日也呼吁，尽管美国政府有国家安全顾虑，美国半导体商仍希望能进入中国市场，盼政府订出明确规范，并强调中国是最大市场，必须在那个市场发挥作用。英媒《金融时报》5月24日刊出黄仁勋专访，提到黄仁勋坦言拜登政府的出口管制措施，已让英伟达被绑手绑脚。中国约占美国科技产业市场三分之一比重，如果美国企业无法与中国作生意，将对美国企业造成巨大损失。黄仁勋并提及，理论上在台湾以外的地方制造芯片，是可行的，但中国市场是无法被取代的。中国微博文章转载该文特别强调黄仁勋说，“如果我们被剥夺了中国市场，我们没有备用计划。没有另一个中国，只有一个中国。”英伟达共同创办人黄仁勋访台言行在中国微博引发热议（微博截图）台财经专家：黄仁勋光芒盖过马斯克媒体报导未来一周黄仁勋将到中国访问，与厂商交流。王绣雯说，就像一般美国商人，亚洲转一圈，考察台湾市场后考察中国市场。美国ＮＢＡ职篮明星林书豪也是到中国大陆打完球再到台湾打球。OpenAI开发的人工智慧聊天机器人程式ChatGPT去年十一月推出带动AI热潮下，英伟达股价从年初108美元狂飙，5月31日突破401美元。英伟达市值近1兆美元，跃升世界前五大公司，台湾财经专家谢金河就说，黄仁勋的光芒盖过了正在中国访问的特斯拉（Tesla）执行长马斯克（ElonReeveMusk）。台媒天下杂志形容，黄仁勋并带动一票台厂成了“AI伺服器大军”。台媒联合报报导，全球IC设计前十强中，辉达、超微（AMD）、联发科、联咏、瑞昱五大公司，掌舵者都是台湾出身。外媒指出，这特殊“人脉网”，是台湾半导体从下游往上游制霸的关键。 记者：夏小华   责编：许书婷、梒青   网编：洪伟```0
   ## 5/31/2023 - [台剧团无惧国安法阴霾　重演六四主题舞台剧](https://www.rfa.org/mandarin/yataibaodao/renquanfazhi/ec-05312023111642.html)
  ```六四事件34周年前夕，台湾剧团重演在香港无法公演的六四舞台剧《5月35日》，六场票房全满。主办单位相信，随着中国对台湾及世界的威胁和影响在扩大，以六四事件为主题的舞台剧会更有吸引力。 香港数百位基督教牧者信徒联署《六四34周年纪念祷文》【我是怎么知道六四的】来信节选 国际特赦组织台湾分会与台湾的"晓剧场"合作，在六四34周年前夕，重演以天安门难属为主题，讲述遇难学生母亲临终前，想到天安门广场拜祭儿子故事的六四舞台剧《5月35日》。国际特赦组织台湾分会秘书长邱伊翎表示，去年在台湾播放港版《5月35日》影片，引起回响大，已有构思在台重演的计划，今年计划公演共六场，全部爆满，反应比去年更佳，相信是随着中国对全球威胁越大，使更多人关注中国和香港人权主题。邱伊翎："我们不是只在讲六四，而是会去谈更多更广泛的人权议题，李明哲的事件、富察和杨智渊等，有越来越多的人，他们入境中国或者香港，可能就会面临到人身安全的危险。在国安法实施之后，中国政府在不断要扩大法律的管辖权，可以逮捕更多外国人，甚至包括台湾人，即使不入境中国跟香港，在欧洲或其他国家，你可能也都会被中国政府要求，送到中国去接受法律的审判，越来越多的人可以去感同身受，不可能是跟我没有关系的。"国际特赦组织台湾分会秘书长邱伊翎表示，在台重演《5月35日》反应佳与随着中国对全球威胁越大有关。（记者李宗翰摄）台重演《5月35日》舞台剧反应佳与中国对全球威胁升高有关邱伊翎表示，以往在台湾，主要是人权团体关注六四事件和中国人权状况，希望重演谈六四的舞台剧故事，能吸引很少接触中国敏感政治话题的台湾人的关注。邱伊翎："中国的人权议题，其实并不是我们自己关起门来不去管它，它就不会影响到我们。事实上，它会影响到整个区域，甚至是全球的人权的现况。一般的老百姓完全不碰政治，但是可能在他的日常生活中，他还是会去面临到家人或亲友，都会用各种方式和理由，限制他有什么话该讲，有什么话不该讲，或可不可以去悼念。对自由的压迫和管控，其实是无所不在的。"她表示，在找寻剧场合作时，没有剧团因为《香港国安法》的风险而拒绝，但会特别安排广东话读白的香港表演者配戴面具。台版《5月35日》导演锺伯渊表示，自由价更高，甘愿为《5月35日》放弃在中港的合作计划。（记者李宗翰摄）台版《5月35日》导演：自由价更高甘愿放弃在中港的合作"晓剧场"兼台版《5月35日》导演锺伯渊表示，决定参与计划时，已考虑可能不能再到香港。他表示，有如此决心，与他不只一次体会大陆对自由的打压有关，2020年台湾大选投票日前夕，在澳门被查问的经验，让他更珍惜自由的可贵。锺伯渊："护照上面我有贴'RepublicofTaiwan'，一直以来去在各国，都没有遇到有人要求我把它撕掉。2020年当我到澳门的时候，就被带进小房间里面质问，要我把它撕掉，他们就放行我。隔天晚上我再回来台湾，看到我的朋友时，我就哭出来了。其实你会很恐惧，你不敢跟任何人说的恐惧感，状况比你想象中还要严重。在那次的经验之后，我认为自由是很重要的，我希望持续的去彰显永远都可以发出来的声音，而不要封闭我自己说话的权利。好像现在不能去香港了，那我就先不要了。"台湾重演在香港无法再公演的六四舞台剧《5月35日》（受访者提供）台版《5月35日》将加入台湾和香港的抗争元素虽然六四事件已发生34年，但锺伯渊认为，《5月35日》通过遇难者母亲"小林"，充份表达天安门难属多年来被打压的情况和伤痛，又说，六四事件既是历史，也能反映当代的人权情况，在台公演的版本，除了谈六四，也加入台湾和香港的抗争历史元素。锺伯渊："这次演出我们要模糊那个界线，'小林'听的台语歌，是台语禁歌，会牵涉到228事件的时候，白色恐怖的台语禁歌。观众会在舞台上面看到一把折烂的伞，代表曾经有过的“雨伞革命”；花瓶里有一束枯掉的太阳花等等，所有关于抗争的意象，都会在舞台上呈现，利用当代这些历史融合戏里面来，它不只是一个单一的，或许透过这个故事，也可以让观众思考，我要经济挂帅，还是要人权挂帅。"演遇难学生母亲"小林"的表演者梁德翔表示，理解这次表演的题材敏感，但强调，作为演员，不是要做政治抗争，只是想呈现母亲对儿子的爱，没有因安全和不能再入境香港等问题影响演出。 记者：陈子非、淳音   责编：许书婷、嘉远   网编：洪伟```0
-  ## 5/31/2023 - [中国五月PMI48.8%仍在荣枯线下　产需两端都放缓](https://www.rfa.org/mandarin/yataibaodao/jingmao/hcm2-05312023103930.html)
- ```中国5月31日公布5月份的制造业PMI为48.8%，比上月下降0.4个百分点，仍继续在荣枯线下小幅回落。5月份的生产指数和新订单指数也呈现微幅下滑。统计数据显示，产需两端有所放缓。 中国制造业PMI降至荣枯线以下百强房企销售下滑中国经济复苏艰难　制造业势头放缓 中国国家统计局5月份公布，中国制造业采购经理指数、非制造业商务活动指数和综合PMI产出指数分别为48.8%、54.5%和52.9%，低于上月0.4、1.9和1.5个百分点。“中国经济景气水平有所回落，恢复发展基础仍需巩固”。中国统计局进一步分析制造业采购经理指数小幅回落原因指出，首先，产需两端有所放缓，生产指数和新订单指数分别为49.6%和48.3%，比上月下降0.6和0.5个百分点，“制造业市场需求仍显不足，企业产能释放受到抑制”。其次，价格指数持续回落。受近期部分大宗商品价格持续下行、市场需求偏弱等因素影响，包括石油煤炭以及化学原料等制品的价格指数都低于31%，行业上下游市场活跃度不高。第三，大型企业PMI为50.0%升至临界点，但中小企业景气度都在荣枯线下，依然较弱。另一方面，5月份非制造业商务活动指数为54.5%，虽然低于上月1.9个百分点，但统计局解读，今年以来始终保持在54.0%以上景气区间，非制造业延续恢复性增长，服务业稳步恢复、建筑业高位回调。新浪财经特约分析师张立群解读周三公布的数据，“表明经济全面回升态势仍在聚力之中。”他分析，订单类指数继续小幅回落，反映市场需求不足的企业占比进一步提高到58%以上，表明需求收缩的问题仍然突出。受此影响，企业信心仍然偏弱，生产经营活动偏谨慎；需求不足也引致价格类指数回落。中国国家统计局五月份公布的中国制造业采购经理指数（网络截图/黄春梅提供）中国景气"弱复苏"恐待七月政治局会议开解方国际铜价近期跌破八千美元整数关卡，由于中国经济复苏乏力，作为经济风向标的大宗商品铜价触及去年十一月以来的低点。有媒体解读，因一连串经济数据显示中国的景气回温停滞，而中国并未祭出大规模支出投资基础建设，再加上中国房地产景气仍低档徘徊，冲击市场信心。第一财经分析，五月以来公布的一连串经济数据不及预期，市场连日上演股、汇双杀，指出“中国经济复苏的第一阶段基本完成，而第二阶段的复苏仍弱于预期，外加地缘政治博弈，因而也可能引发获利了结”。新浪财经有关如何看“强预期”与“弱复苏”的一篇文章指出，目前经济的结构问题集中在三方面，一是上游和下游库存水平还比较高；二是复苏链条短，拉动作用不大，生活和商旅服务的修复对经济拉动链条短，在收入循环恢复的需要过程，在这个过程中可能出现经济环比减弱的情况；三是居民企业加杠杆的意愿不强。“经济未来一个季度可能很难继续走强”。文章分析，变局节点最快需要观察今年七月的政治局会议。更有可能是在地方财政或者就业等其它宏观压力催化下，才会带动总量政策增量。 记者：黄春梅   责编：许书婷、梒青   网编：洪伟```0
