--- a/新闻/美国之音.md
+++ b/新闻/美国之音.md
@@ -1,4 +1,6 @@
 
+  ## 6/2/2023 - [火力支援乌克兰 美国拟向日本购买TNT炸药](https://www.voachinese.com/a/us-seeking-tnt-from-japan-20230602/7119884.html)
+ ```《路透社》引述两名知情人士报道，美国寻求自日本获得TNT炸药的供应，以用于填充155毫米炮弹，帮助乌克兰反击俄罗斯的军队。```0
   ## 6/2/2023 - [由于中国不断镇压异议 “六四纪念馆”转战纽约市开放](https://www.voachinese.com/a/as-china-cracks-down-on-dissent-new-york-city-gives-refuge-to-exhibit-remembering-tiananmen-square-20230602/7119847.html)
  ```现年50多岁的周锋锁，对1989年那个令人沮丧的春天记忆犹新，当时坦克车开进了北京的天安门广场。当共产党的军队蜂拥而上强制结束民主抗议活动时，大学生们和许多人遭到殴打、流血，导致数百甚至数千人死亡。```0
   ## 6/2/2023 - [6.4忌日临近 北京强迫旅游异议人士 加紧驱赶人权律师](https://www.voachinese.com/a/beijing-escalates-security-measures-by-driving-away-dissidents-and-rights-lawyers-prior-to-34th-anniversary-of-tiananmen-massacre-20230602/7119401.html)
@@ -37,5 +39,3 @@
  ```在美国众议院星期三（5月31日）晚顺利通过一项提高美国联邦31.4万亿美元债务上限并削减联邦支出的法案后，美国参议院也于星期四开始紧锣密鼓地对这项法案进行辩论，并希望在未来四天内快速通过这一法案，并将它送给拜登总统签字，以避免灾难性的债务违约。```0
   ## 6/1/2023 - [中国经济前景堪忧 外国投资人纷纷抛售中国股票加速撤资](https://www.voachinese.com/a/foreigners-pull-more-money-out-of-china-in-may-20230601/7118368.html)
  ```随着中国国内需求疲软及公司盈利预期不佳导致中国和香港股市暴跌，外国投资者抛售中国股票的势头今年5月加速。```0
-  ## 6/1/2023 - [英伟达CEO黄仁勋：依赖台湾生产高端芯片“完全安全”](https://www.voachinese.com/a/nvidia-ceo-feels-safe-relying-on-taiwan-for-chips-20230601/7118361.html)
- ```美国顶尖人工智能芯片和超算供应商英伟达（Nvidia）创办人兼首席执行官黄仁勋星期四（6月1日）表示，依赖台湾生产高端和先进人工智能等芯片仍“完全安全”。```0
