--- a/新闻/法国国际广播电台.md
+++ b/新闻/法国国际广播电台.md
@@ -1,4 +1,14 @@
 
+  ## 6/2/2023 - [欧盟为保选举安全 要求全境下架中国与俄罗斯软件设备与平台](https://www.rfi.fr/cn/%E6%AC%A7%E6%B4%B2/20230602-%E6%AC%A7%E7%9B%9F%E4%B8%BA%E4%BF%9D%E9%80%89%E4%B8%BE%E5%AE%89%E5%85%A8-%E8%A6%81%E6%B1%82%E5%85%A8%E5%A2%83%E4%B8%8B%E6%9E%B6%E4%B8%AD%E5%9B%BD%E4%B8%8E%E4%BF%84%E7%BD%97%E6%96%AF%E8%BD%AF%E4%BB%B6%E8%AE%BE%E5%A4%87%E4%B8%8E%E5%B9%B3%E5%8F%B0)
+ ```明年6月6日至9日间，欧洲联盟27个国家选民将投票选出新一届的欧洲议会议员，明年7月1日起议会和欧盟执委会人事都将换新。欧盟议会以高票赞成通过一份报告文件，明确警告外国干预选举，建议全欧盟范围下架来自中国与俄罗斯的平台，设备以及软件例如华为、中兴电讯、同方威视，以及俄国资安公司卡巴斯基（Kaspersky）、生物辨识公司NtechLab等。```0
+  ## 6/2/2023 - [俄罗斯发动一月内第6波夜袭 乌克兰称全部成功拦截](https://www.rfi.fr/cn/%E6%AC%A7%E6%B4%B2/20230602-%E4%BF%84%E7%BD%97%E6%96%AF%E5%8F%91%E5%8A%A8%E4%B8%80%E6%9C%88%E5%86%85%E7%AC%AC6%E6%B3%A2%E5%A4%9C%E8%A2%AD-%E4%B9%8C%E5%85%8B%E5%85%B0%E7%A7%B0%E5%85%A8%E9%83%A8%E6%88%90%E5%8A%9F%E6%8B%A6%E6%88%AA)
+ ```乌克兰今天报告已经拦截了所有俄罗斯昨夜今晨攻击乌克兰的导弹和无人机，这些导弹和无人机仍然是在夜间出动，袭击目标包括基辅。```0
+  ## 6/2/2023 - [香港罕见闪电劈公屋外墙 专家指避雷设施非百分百保障](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20230602-%E9%A6%99%E6%B8%AF%E7%BD%95%E8%A7%81%E9%97%AA%E7%94%B5%E5%8A%88%E5%85%AC%E5%B1%8B%E5%A4%96%E5%A2%99-%E4%B8%93%E5%AE%B6%E6%8C%87%E9%81%BF%E9%9B%B7%E8%AE%BE%E6%96%BD%E9%9D%9E%E7%99%BE%E5%88%86%E7%99%BE%E4%BF%9D%E9%9A%9C)
+ ```香港昨(1日)晨在雷电交加之际，一个公共屋村单位竟被闪电击中，单位外的石檐篷一角亦有崩缺，单位内无人受伤，但户内人员均受惊吓。管理公屋的房屋署表示，已检查该屋村的避雷设施，并无问题；天文台官员则指出，闪电击中位置有随机性，避雷针并非百分百保障。```0
+  ## 6/2/2023 - [欧盟将与中亚五国举行第二次峰会](https://www.rfi.fr/cn/%E6%AC%A7%E6%B4%B2/20230602-%E6%AC%A7%E7%9B%9F%E4%B8%8E%E4%B8%AD%E4%BA%9A%E4%BA%94%E5%9B%BD%E4%B8%BE%E8%A1%8C%E7%AC%AC%E4%BA%8C%E6%AC%A1%E5%B3%B0%E4%BC%9A)
+ ```欧洲理事会主席查尔斯-米歇尔周五抵达吉尔吉斯斯坦，参加欧盟（EU）与中亚地区的第二次峰会，在俄罗斯衰弱的背景下，中亚地区正受到大国的热烈追捧，欧盟已经是该地区最大的捐助方。```0
+  ## 6/2/2023 - [金砖峰会上不逮捕普京？南非打模糊牌](https://www.rfi.fr/cn/%E9%9D%9E%E6%B4%B2/20230602-%E9%87%91%E7%A0%96%E5%B3%B0%E4%BC%9A%E4%B8%8A%E4%B8%8D%E9%80%AE%E6%8D%95%E6%99%AE%E4%BA%AC-%E5%8D%97%E9%9D%9E%E6%89%93%E6%A8%A1%E7%B3%8A%E7%89%8C)
+ ```由南非轮值主席主办的金砖集团峰会还有两个月时间召开，南非要不要执行国际刑事法庭对俄罗斯总统普京已经发出的国际逮捕令，仍然是一个未决问题。南非连续两天召开外长会议，为峰会敲定程序，也为应该与否豁免普京做出讨论。会议昨天结束，南非似乎仍然没有做出决断，以模糊牌回应外界质询。```0
   ## 6/2/2023 - [海内外抗遗忘：许志永狱中吁「六四禁食」 新纪念馆美国今开幕延「六四」记忆](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20230602-%E6%B5%B7%E5%86%85%E5%A4%96%E6%8A%97%E9%81%97%E5%BF%98-%E8%AE%B8%E5%BF%97%E6%B0%B8%E7%8B%B1%E4%B8%AD%E5%90%81-%E5%85%AD%E5%9B%9B%E7%A6%81%E9%A3%9F-%E6%96%B0%E7%BA%AA%E5%BF%B5%E9%A6%86%E7%BE%8E%E5%9B%BD%E4%BB%8A%E5%BC%80%E5%B9%95%E5%BB%B6-%E5%85%AD%E5%9B%9B-%E8%AE%B0%E5%BF%86)
  ```后天是「六四事件」34周年纪念日，在香港因打压而难以公开悼念之际，海内外均出现抗拒遗忘的行动：六四纪念馆在香港的被迫关闭后不足两年，重建的新馆今天在美国纽约开幕；上月因「颠覆国家政权罪」判囚14年的维权律师许志永透过管道向外界传递讯息，表示「六四」会在狱中继续悼念：「我会禁食一天，这是不可遏制的纪念……即使身陷囹圄依然可以坚持。」他更呼吁其他人当日一起禁食，以纪念先辈的牺牲和筑起华夏新民族精神。```0
   ## 6/2/2023 - [拜登：美国不寻求与中国发生冲突或对抗，但准备好迎接激烈竞争](https://www.rfi.fr/cn/%E4%B8%93%E6%A0%8F%E6%A3%80%E7%B4%A2/%E8%A6%81%E9%97%BB%E5%88%86%E6%9E%90/20230602-%E6%8B%9C%E7%99%BB-%E7%BE%8E%E5%9B%BD%E5%B9%B6%E4%B8%8D%E5%AF%BB%E6%B1%82%E4%B8%8E%E4%B8%AD%E5%9B%BD%E5%8F%91%E7%94%9F%E5%86%B2%E7%AA%81%E6%88%96%E5%AF%B9%E6%8A%97)
@@ -47,15 +57,5 @@
  ```路透社引述消息称，特斯拉公司首席执行官埃隆·马斯克周三下午在北京与中国国务院副总理丁薛祥会了面。丁薛祥被认为是习近平的幕僚长。据法新社的消息说，马克龙的飞机已在周四上午11点离开了上海。```0
   ## 6/1/2023 - [欧洲政治共同体二次峰会在摩尔多瓦举行与乌克兰共同挑战普京](https://www.rfi.fr/cn/%E5%9B%BD%E9%99%85/20230601-%E6%AC%A7%E6%B4%B2%E6%94%BF%E6%B2%BB%E5%85%B1%E5%90%8C%E4%BD%93%E4%BA%8C%E6%AC%A1%E5%B3%B0%E4%BC%9A%E5%9C%A8%E6%91%A9%E5%B0%94%E5%A4%9A%E7%93%A6%E4%B8%BE%E8%A1%8C%E4%B8%8E%E4%B9%8C%E5%85%8B%E5%85%B0%E5%85%B1%E5%90%8C%E6%8C%91%E6%88%98%E6%99%AE%E4%BA%AC)
  ```四十五位欧洲领导人与乌克兰总统泽连斯基周四6月1日在摩尔多瓦举行欧洲政治共同体峰会，要在这个与乌克兰接壤的小国，挑战俄罗斯总统普京。摩尔多瓦也生活在对俄罗斯的恐惧中。北约今天对该国天空实施安全措施。```0
-  ## 6/1/2023 - [台美在华盛顿签署21世纪贸易倡议首批协定](https://www.rfi.fr/cn/%E6%B8%AF%E6%BE%B3%E5%8F%B0/20230601-%E5%8F%B0%E7%BE%8E%E5%9C%A8%E5%8D%8E%E7%9B%9B%E9%A1%BF%E7%AD%BE%E7%BD%B221%E4%B8%96%E7%BA%AA%E8%B4%B8%E6%98%93%E5%80%A1%E8%AE%AE%E9%A6%96%E6%89%B9%E5%8D%8F%E5%AE%9A)
- ```根据台湾行政院经贸谈判办公室6月1日宣布的消息，美国与台湾21世纪贸易倡议谈判启动一周年之际，双方于当日在华盛顿签署首批五项协定。行政院发言人林子伦表示，这些协定“深具历史意义，也是新的开始"。```0
-  ## 6/1/2023 - [像堂吉诃德一样踏上法国五座磨坊的征途](https://www.rfi.fr/cn/%E4%B8%93%E6%A0%8F%E6%A3%80%E7%B4%A2/%E6%B3%95%E5%9B%BD%E9%A3%8E%E5%85%89/20230601-%E5%83%8F%E5%A0%82%E5%90%89%E8%AF%83%E5%BE%B7%E4%B8%80%E6%A0%B7%E8%B8%8F%E4%B8%8A%E6%B3%95%E5%9B%BD%E4%BA%94%E5%BA%A7%E7%A3%A8%E5%9D%8A%E7%9A%84%E5%BE%81%E9%80%94)
- ```本期法国风光的专题，让我们像堂吉诃德一样，从东南到西北途经瓦尔省、滨海夏朗德省再到旺代省去征战五座或水力或风力的磨坊吧，其中都德磨坊更是不容错过！```0
   ## 6/1/2023 - [美国开审纽约退休警察涉入的中国“猎狐行动”首案](https://www.rfi.fr/cn/%E6%B3%95%E8%AF%AD%E6%95%99%E5%AD%A6/20230601-%E7%BE%8E%E5%9B%BD%E5%BC%80%E5%AE%A1%E7%BA%BD%E7%BA%A6%E9%80%80%E4%BC%91%E8%AD%A6%E5%AF%9F%E6%B6%89%E5%85%A5%E7%9A%84%E4%B8%AD%E5%9B%BD-%E7%8C%8E%E7%8B%90%E8%A1%8C%E5%8A%A8-%E9%A6%96%E6%A1%88)
  ```纽约退休警察麦克马洪（MichaelMcMahon）和2名中国男子因涉嫌协助中国政府骚扰、恐吓和胁迫海外异议人士和其他人，试图将他们强行遣返，遭美司法部起诉。周三，这个首件中国海外“猎狐行动”案在布鲁克林联邦法庭开审。```0
-  ## 6/1/2023 - [「六四」34年：电影包场因日子敏感「被取消」 表扬记者采访民运信被港台清拆](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20230601-%E5%85%AD%E5%9B%9B-34%E5%B9%B4-%E7%94%B5%E5%BD%B1%E5%8C%85%E5%9C%BA%E5%9B%A0%E6%97%A5%E5%AD%90%E6%95%8F%E6%84%9F-%E8%A2%AB%E5%8F%96%E6%B6%88-%E8%A1%A8%E6%89%AC%E8%AE%B0%E8%80%85%E9%87%87%E8%AE%BF%E6%B0%91%E8%BF%90%E4%BF%A1%E8%A2%AB%E6%B8%AF%E5%8F%B0%E6%B8%85%E6%8B%86)
- ```自从中国式的「敏感日子」以「六四」正式登陆香港后，相关忌讳正在增加。一间影院在6月4日的三场「包场」电影放映会暨导演分享会因「业界代表」指「当晚为敏感日子，避免聚集活动」为由而取消，尽管电影与「六四」和抗争无关，地点亦远离往常举办悼念晚会的维园；另外，一封向采访八九民运的香港电台记者致谢的巨型表扬信，在新闻部内张贴近34年后，近日被管理层以清理与办公室无关物品为由拆掉。资深传媒人李锦洪质疑当局「做过笼」(即「过了头」)，做法反而令人「记住六四」。```0
-  ## 6/1/2023 - [马克龙：欧洲没有空间容纳帝国主义的幻想，乌克兰不会被征服](https://www.rfi.fr/cn/%E4%B8%93%E6%A0%8F%E6%A3%80%E7%B4%A2/%E8%A6%81%E9%97%BB%E5%88%86%E6%9E%90/20230601-%E9%A9%AC%E5%85%8B%E9%BE%99-%E6%AC%A7%E6%B4%B2%E6%B2%A1%E6%9C%89%E7%A9%BA%E9%97%B4%E5%AE%B9%E7%BA%B3%E5%B8%9D%E5%9B%BD%E4%B8%BB%E4%B9%89%E7%9A%84%E5%B9%BB%E6%83%B3%EF%BC%8C%E4%B9%8C%E5%85%8B%E5%85%B0%E4%B8%8D%E4%BC%9A%E8%A2%AB%E5%BE%81%E6%9C%8D)
- ```5月31日，法国总统马克龙（EmmanuelMacron）受斯洛伐克总统恰普托娃（ZuzanaČaputová）之邀访问该国，并出席了由斯洛伐克智库主办的2023年“全球安全”布拉迪斯拉发论坛。马克龙当天向大会发表讲话，并就俄罗斯入侵乌克兰战争，法国对中东欧国家的政策及欧盟内部团结等系列话题发表了“历史性”讲话。```0
-  ## 5/31/2023 - [美国宣布向乌克兰提供新一轮总值3亿美元军事援助](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20230531-%E7%BE%8E%E5%9B%BD%E5%AE%A3%E5%B8%83%E5%90%91%E4%B9%8C%E5%85%8B%E5%85%B0%E6%8F%90%E4%BE%9B%E6%96%B0%E4%B8%80%E8%BD%AE%E6%80%BB%E5%80%BC3%E4%BA%BF%E7%BE%8E%E5%85%83%E5%86%9B%E4%BA%8B%E6%8F%B4%E5%8A%A9)
- ```美国周三(5月31日）宣布，向乌克兰提供新一轮总值3亿美元的军事援助，其中主要包括爱国者防空系统的导弹。乌克兰总理周三表示，作为世界银行行政能力持久性公共支出计划（PEACE）的一部分，基辅已从美国收到12.5亿美元的资金。```0
