--- a/新闻/法国国际广播电台.md
+++ b/新闻/法国国际广播电台.md
@@ -1,4 +1,12 @@
 
+  ## 6/2/2023 - [中国高规格接待了马斯克](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20230602-%E4%B8%AD%E5%9B%BD%E9%AB%98%E8%A7%84%E6%A0%BC%E6%8E%A5%E5%BE%85%E4%BA%86%E9%A9%AC%E6%96%AF%E5%85%8B)
+ ```特斯拉执行长马斯克自5月30日抵达中国到今天离境，受到官方拉高规格接待，其中包括正国级的中国国务院副总理丁薛祥及秦刚等3名部长。而他在中国网络上受到的瞩目，也非其他外企高管可比。美国媒体称，马斯克在中国是位名人，他的访问引起了中国网民的极大兴趣。中国官员利用马斯克访华之行来促进与美国的商业关系，尽管中国政府最近在以国家安全的名义打击一些外国公司。```0
+  ## 6/2/2023 - [美国债务违约躲过一劫](https://www.rfi.fr/cn/%E7%BE%8E%E6%B4%B2/20230602-%E7%BE%8E%E5%9B%BD%E5%80%BA%E5%8A%A1%E8%BF%9D%E7%BA%A6%E8%BA%B2%E8%BF%87%E4%B8%80%E5%8A%AB)
+ ```美国参议院1日稍晚通过了一项涉及广泛的立法，暂停31.4万亿美元的债务上限并削减联邦开支，推进了总统拜登和众议院议长麦卡锡达成的旨在避免前所未有的美国违约的两党协议。```0
+  ## 6/2/2023 - [核武库：美国盯上中国](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20230602-%E6%A0%B8%E6%AD%A6%E5%BA%93-%E7%BE%8E%E5%9B%BD%E7%9B%AF%E4%B8%8A%E4%B8%AD%E5%9B%BD)
+ ```美国称未来对核裁军的任何承诺都将取决于中国。这是美国官方第一次将中国放置美国核承诺与裁军前景的中心位置。此前，中国拒绝参见目前已经中断的吗与俄罗斯之间的核裁军谈判。美国官方称，美国也没有忽视俄罗斯核武器状况。```0
+  ## 6/2/2023 - [中资加入 香港两大外资外卖平台被指可能违反竞争条款 允放宽餐厅合作条款](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20230602-%E4%B8%AD%E8%B5%84%E5%8A%A0%E5%85%A5-%E9%A6%99%E6%B8%AF%E4%B8%A4%E5%A4%A7%E5%A4%96%E8%B5%84%E5%A4%96%E5%8D%96%E5%B9%B3%E5%8F%B0%E8%A2%AB%E6%8C%87%E5%8F%AF%E8%83%BD%E8%BF%9D%E5%8F%8D%E7%AB%9E%E4%BA%89%E6%9D%A1%E6%AC%BE-%E5%85%81%E6%94%BE%E5%AE%BD%E9%A4%90%E5%8E%85%E5%90%88%E4%BD%9C%E6%9D%A1%E6%AC%BE)
+ ```在中国外卖平台美团进军香港不足十天，本地推动竞争的法定组织公布，香港两大网上外卖平台foodpanda及Deliveroo户户送，对合作餐厅施加独家或价格限制条款，有损竞争，「可能会妨碍新成立或小型的平台进入市场」。两大平台同意撤销或修改被指可能违反《竞争条例》的条款，维期三年。```0
   ## 6/2/2023 - [欧盟为保选举安全 要求全境下架中国与俄罗斯软件设备与平台](https://www.rfi.fr/cn/%E6%AC%A7%E6%B4%B2/20230602-%E6%AC%A7%E7%9B%9F%E4%B8%BA%E4%BF%9D%E9%80%89%E4%B8%BE%E5%AE%89%E5%85%A8-%E8%A6%81%E6%B1%82%E5%85%A8%E5%A2%83%E4%B8%8B%E6%9E%B6%E4%B8%AD%E5%9B%BD%E4%B8%8E%E4%BF%84%E7%BD%97%E6%96%AF%E8%BD%AF%E4%BB%B6%E8%AE%BE%E5%A4%87%E4%B8%8E%E5%B9%B3%E5%8F%B0)
  ```明年6月6日至9日间，欧洲联盟27个国家选民将投票选出新一届的欧洲议会议员，明年7月1日起议会和欧盟执委会人事都将换新。欧盟议会以高票赞成通过一份报告文件，明确警告外国干预选举，建议全欧盟范围下架来自中国与俄罗斯的平台，设备以及软件例如华为、中兴电讯、同方威视，以及俄国资安公司卡巴斯基（Kaspersky）、生物辨识公司NtechLab等。```0
   ## 6/2/2023 - [俄罗斯发动一月内第6波夜袭 乌克兰称全部成功拦截](https://www.rfi.fr/cn/%E6%AC%A7%E6%B4%B2/20230602-%E4%BF%84%E7%BD%97%E6%96%AF%E5%8F%91%E5%8A%A8%E4%B8%80%E6%9C%88%E5%86%85%E7%AC%AC6%E6%B3%A2%E5%A4%9C%E8%A2%AD-%E4%B9%8C%E5%85%8B%E5%85%B0%E7%A7%B0%E5%85%A8%E9%83%A8%E6%88%90%E5%8A%9F%E6%8B%A6%E6%88%AA)
@@ -51,11 +59,3 @@
  ```北约今天周四在奥斯陆举行非正式外长会议，议题包括：乌克兰的加入、秘书长斯托尔滕贝格的继任，以及军费开支跃升。外长们试图在7月份维尔纽斯北约峰会前，为这三个棘手问题找到折中方案。马克龙提到了美国对以色列保护承诺模式。```0
   ## 6/1/2023 - [【视频】欧元区通胀5月呈现走缓 但食品价格上涨仍然居高](https://www.rfi.fr/cn/%E6%AC%A7%E6%B4%B2/20230601-%E8%A7%86%E9%A2%91-%E6%AC%A7%E5%85%83%E5%8C%BA%E9%80%9A%E8%83%805%E6%9C%88%E5%91%88%E7%8E%B0%E8%B5%B0%E7%BC%93-%E4%BD%86%E9%A3%9F%E5%93%81%E4%BB%B7%E6%A0%BC%E4%B8%8A%E6%B6%A8%E4%BB%8D%E7%84%B6%E5%B1%85%E9%AB%98)
  ```5月份欧元区通胀率增速低于前几个月，通胀走缓的情况在法国、德国和意大利等国尤为明显，分析指主要原因是能源价格的大幅下降，但与此同时食品价格上涨仍然居高。```0
-  ## 6/1/2023 - [汉学家侯芷明：越来越多的中国留学生参加六四纪念令人欣慰](https://www.rfi.fr/cn/%E4%B8%93%E6%A0%8F%E6%A3%80%E7%B4%A2/%E8%A6%81%E9%97%BB%E8%A7%A3%E8%AF%B4/20230601-%E6%B1%89%E5%AD%A6%E5%AE%B6%E4%BE%AF%E8%8A%B7%E6%98%8E-%E8%B6%8A%E6%9D%A5%E8%B6%8A%E5%A4%9A%E7%9A%84%E4%B8%AD%E5%9B%BD%E7%95%99%E5%AD%A6%E7%94%9F%E5%8F%82%E5%8A%A0%E5%85%AD%E5%9B%9B%E7%BA%AA%E5%BF%B5%E4%BB%A4%E4%BA%BA%E6%AC%A3%E6%85%B0)
- ```标志着1989年中国大规模争民主运动悲惨落幕的六四纪念日临近。曾经是全球最大规模的六四纪念活动的香港维园烛光晚会自2020年起就已经不再可能，但世界各地人权组织的纪念活动并没有停止。一如往年，法国协会组织“中国团结”6月4日将在巴黎市中心的蓬皮杜文化中心附近，组织集会活动。无国界记者、大赦国际、国际人权联盟、法国共同反对死刑等十几个人权团体都将有代表出席。与往年不同的是，一些旅法中国留学生也不再沉默，6月3日和4日两天，他们自行在巴黎发起活动。六四34年之后，是否正有更多的中国年轻人在海外加入六四纪念集会呢？法国汉学家、中国团结协会主席玛丽-侯芷明女士接受本台电话采访时，对这种新现象颇感欣慰。```0
-  ## 6/1/2023 - [路透：马斯克周三下午与中国副总理丁薛祥见了面](https://www.rfi.fr/cn/%E5%9B%BD%E9%99%85/20230601-%E8%B7%AF%E9%80%8F-%E9%A9%AC%E6%96%AF%E5%85%8B%E5%91%A8%E4%B8%89%E4%B8%8B%E5%8D%88%E4%B8%8E%E4%B8%AD%E5%9B%BD%E5%89%AF%E6%80%BB%E7%90%86%E4%B8%81%E8%96%9B%E7%A5%A5%E8%A7%81%E4%BA%86%E9%9D%A2)
- ```路透社引述消息称，特斯拉公司首席执行官埃隆·马斯克周三下午在北京与中国国务院副总理丁薛祥会了面。丁薛祥被认为是习近平的幕僚长。据法新社的消息说，马克龙的飞机已在周四上午11点离开了上海。```0
-  ## 6/1/2023 - [欧洲政治共同体二次峰会在摩尔多瓦举行与乌克兰共同挑战普京](https://www.rfi.fr/cn/%E5%9B%BD%E9%99%85/20230601-%E6%AC%A7%E6%B4%B2%E6%94%BF%E6%B2%BB%E5%85%B1%E5%90%8C%E4%BD%93%E4%BA%8C%E6%AC%A1%E5%B3%B0%E4%BC%9A%E5%9C%A8%E6%91%A9%E5%B0%94%E5%A4%9A%E7%93%A6%E4%B8%BE%E8%A1%8C%E4%B8%8E%E4%B9%8C%E5%85%8B%E5%85%B0%E5%85%B1%E5%90%8C%E6%8C%91%E6%88%98%E6%99%AE%E4%BA%AC)
- ```四十五位欧洲领导人与乌克兰总统泽连斯基周四6月1日在摩尔多瓦举行欧洲政治共同体峰会，要在这个与乌克兰接壤的小国，挑战俄罗斯总统普京。摩尔多瓦也生活在对俄罗斯的恐惧中。北约今天对该国天空实施安全措施。```0
-  ## 6/1/2023 - [美国开审纽约退休警察涉入的中国“猎狐行动”首案](https://www.rfi.fr/cn/%E6%B3%95%E8%AF%AD%E6%95%99%E5%AD%A6/20230601-%E7%BE%8E%E5%9B%BD%E5%BC%80%E5%AE%A1%E7%BA%BD%E7%BA%A6%E9%80%80%E4%BC%91%E8%AD%A6%E5%AF%9F%E6%B6%89%E5%85%A5%E7%9A%84%E4%B8%AD%E5%9B%BD-%E7%8C%8E%E7%8B%90%E8%A1%8C%E5%8A%A8-%E9%A6%96%E6%A1%88)
- ```纽约退休警察麦克马洪（MichaelMcMahon）和2名中国男子因涉嫌协助中国政府骚扰、恐吓和胁迫海外异议人士和其他人，试图将他们强行遣返，遭美司法部起诉。周三，这个首件中国海外“猎狐行动”案在布鲁克林联邦法庭开审。```0
