--- a/新闻/美国之音.md
+++ b/新闻/美国之音.md
@@ -1,7 +1,13 @@
 
+  ## 6/2/2023 - [美中战略竞争之际 中国银行将在巴新设首家分行](https://www.voachinese.com/a/bank-of-china-chairman-visits-papua-new-guinea-amid-sino-us-strategic-rivalry-20230602/7119963.html)
+ ```中国银行(BankofChina)董事长葛海蛟已前往南太平洋岛国巴布亚新几内亚，这家世界第四大银行寻求获得巴新的营业执照。巴新正在寻求推进与中国的贸易，并同时扩大与美国的防务关系。```0
+  ## 6/2/2023 - [中国往返美国4条新航班 避开俄罗斯领空](https://www.voachinese.com/a/us-china-flights-russia-20230602/7119928.html)
+ ```美国于5月初同意将往返美国的中国籍航空公司航班增加到每周12趟，根据飞航追踪网站FlightAware的资料显示，这些新批准的航班避开了俄罗斯的领空。美中官方都并未说明是否要求航班避开俄罗斯领空，但对于两国之间增加直航抱持肯定态度。```0
+  ## 6/2/2023 - [美国参议院批准提高债务上限 以避免美国违约](https://www.voachinese.com/a/congress-approves-debt-limit-suspension-averting-default-20230602/7119922.html)
+ ```美国参议院周四晚间（6月1日）通过了由总统拜登支持的两党立法，该立法提高了政府31.4万亿美元的债务上限，避免了有史以来的首次违约。```0
   ## 6/2/2023 - [火力支援乌克兰 美国拟向日本购买TNT炸药](https://www.voachinese.com/a/us-seeking-tnt-from-japan-20230602/7119884.html)
  ```《路透社》引述两名知情人士报道，美国寻求自日本获得TNT炸药的供应，以用于填充155毫米炮弹，帮助乌克兰反击俄罗斯的军队。```0
-  ## 6/2/2023 - [由于中国不断镇压异议 “六四纪念馆”转战纽约市开放](https://www.voachinese.com/a/as-china-cracks-down-on-dissent-new-york-city-gives-refuge-to-exhibit-remembering-tiananmen-square-20230602/7119847.html)
+  ## 6/2/2023 - [由于中国不断镇压异议，“六四纪念馆”转战纽约市开放](https://www.voachinese.com/a/as-china-cracks-down-on-dissent-new-york-city-gives-refuge-to-exhibit-remembering-tiananmen-square-20230602/7119847.html)
  ```现年50多岁的周锋锁，对1989年那个令人沮丧的春天记忆犹新，当时坦克车开进了北京的天安门广场。当共产党的军队蜂拥而上强制结束民主抗议活动时，大学生们和许多人遭到殴打、流血，导致数百甚至数千人死亡。```0
   ## 6/2/2023 - [6.4忌日临近 北京强迫旅游异议人士 加紧驱赶人权律师](https://www.voachinese.com/a/beijing-escalates-security-measures-by-driving-away-dissidents-and-rights-lawyers-prior-to-34th-anniversary-of-tiananmen-massacre-20230602/7119401.html)
  ```震惊世界的天安门事件34周年来临之际，中共当局在党总书记习近平强行连任、经历三年疫情和白纸运动之后仍然一如既往地避而不提其当年所称的“平息反革命暴乱”或后来淡化为“政治风波”的这段历史，而是一再强调国家安全，高度戒备，加强了对政治敏感人物的严密监控，要求他们在六四敏感期噤声及中断与外界联系，甚至强迫一些异议人士外出旅游，同时加紧驱赶一些在北京的人权律师及其亲属，严重干扰了他们的正常生活和工作。```0
@@ -33,9 +39,3 @@
  ```中国国防部长李尚福星期四（6月1日）在新加坡与新加坡国防部长黄永宏举行会晤，两人并签署一项合作备忘录，计划建立一条两国军方领导人之间的保密电话热线。```0
   ## 6/1/2023 - [中国新冠疫情卷土重来 政府躺平 民众淡然](https://www.voachinese.com/a/china-is-bracing-for-a-massive-new-wave-of-covid-cases-20230601/7118745.html)
  ```继2022年底中国结束清零政策全国新冠疫情大爆发之后，近期中国又再次面临新冠持续感染高峰，甚至出现病人求医寻药导致医院爆满的现象。不少患者之前已经历感染，如今随着抗体水平的下降再次感染，但是大都症状较轻，并没有明显影响日常生活。然而，医学专家对于中国目前没有有效疫苗和放弃统计的做法感到担忧，认为这无助于应对将来的持续感染。```0
-  ## 6/1/2023 - [中国制造业采购经理指数收缩快于预期，政策制定者压力加大](https://www.voachinese.com/a/china-s-factory-activity-falls-faster-than-expected-as-recovery-stumbles-20230601/7118390.html)
- ```由于需求减弱，中国今年5月份的工业活动收缩得比预期要快，为政策制定者支撑不平衡的经济复苏施加了更多的压力，令亚洲金融市场走低。```0
-  ## 6/1/2023 - [继美国众议院通过债务上限法案后，参议院寻求快速通过避免违约](https://www.voachinese.com/a/us-senate-aims-for-quick-passage-of-debt-ceiling-bill-to-avoid-default-060123/7118634.html)
- ```在美国众议院星期三（5月31日）晚顺利通过一项提高美国联邦31.4万亿美元债务上限并削减联邦支出的法案后，美国参议院也于星期四开始紧锣密鼓地对这项法案进行辩论，并希望在未来四天内快速通过这一法案，并将它送给拜登总统签字，以避免灾难性的债务违约。```0
-  ## 6/1/2023 - [中国经济前景堪忧 外国投资人纷纷抛售中国股票加速撤资](https://www.voachinese.com/a/foreigners-pull-more-money-out-of-china-in-may-20230601/7118368.html)
- ```随着中国国内需求疲软及公司盈利预期不佳导致中国和香港股市暴跌，外国投资者抛售中国股票的势头今年5月加速。```0
