--- a/新闻/法国国际广播电台.md
+++ b/新闻/法国国际广播电台.md
@@ -1,4 +1,6 @@
 
+  ## 6/2/2023 - [美国可能采购日本炸药以生产炮弹军援乌克兰](https://www.rfi.fr/cn/%E4%BA%9A%E6%B4%B2/20230602-%E7%BE%8E%E5%9B%BD%E5%8F%AF%E8%83%BD%E9%87%87%E8%B4%AD%E6%97%A5%E6%9C%AC%E7%82%B8%E8%8D%AF%E4%BB%A5%E7%94%9F%E4%BA%A7%E7%82%AE%E5%BC%B9%E5%86%9B%E6%8F%B4%E4%B9%8C%E5%85%8B%E5%85%B0)
+ ```乌克兰敦促盟国大力军援炮弹，以弥补弹药吃紧以及酝酿战略反攻。美国正寻求从日本采购炸药，用于155毫米炮弹的生产，供应给乌克兰，以帮助乌克兰以反击俄罗斯军队。```0
   ## 6/2/2023 - [中国高规格接待了马斯克](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20230602-%E4%B8%AD%E5%9B%BD%E9%AB%98%E8%A7%84%E6%A0%BC%E6%8E%A5%E5%BE%85%E4%BA%86%E9%A9%AC%E6%96%AF%E5%85%8B)
  ```特斯拉执行长马斯克自5月30日抵达中国到今天离境，受到官方拉高规格接待，其中包括正国级的中国国务院副总理丁薛祥及秦刚等3名部长。而他在中国网络上受到的瞩目，也非其他外企高管可比。美国媒体称，马斯克在中国是位名人，他的访问引起了中国网民的极大兴趣。中国官员利用马斯克访华之行来促进与美国的商业关系，尽管中国政府最近在以国家安全的名义打击一些外国公司。```0
   ## 6/2/2023 - [美国债务违约躲过一劫](https://www.rfi.fr/cn/%E7%BE%8E%E6%B4%B2/20230602-%E7%BE%8E%E5%9B%BD%E5%80%BA%E5%8A%A1%E8%BF%9D%E7%BA%A6%E8%BA%B2%E8%BF%87%E4%B8%80%E5%8A%AB)
@@ -55,7 +57,5 @@
  ```正在巴黎召开的联合国减低塑料污染公约谈判大会启动两天来连续为议事规则争论不休，试图在多数表决制与全体表决制中做出选择。如果说每一个国家无论其大小贫富都应该在联大享有同等的话语权的原则毋容置疑的话，在减低塑料污染问题上，各国所捍卫的利益及其所必需承担的责任显然不尽相同。公约对沙特阿拉伯等为塑料提供原材料的石油出口大国以及中美等塑料生产与消费大国所可能带来的影响显然大大高于其他国家，这也是为什么在减低塑料污染高雄心联盟的五十多个国家中并没有上述国家的影子。同气候谈判相类似，倘若塑料大国不能立刻采取措施推动生产转型，遏止塑料生产特别是一次性塑料产品的生产，那么，这些国家所衍生的塑料污染将会抵消其他国家的减塑努力。```0
   ## 6/1/2023 - [【视频】监管人工智能：欧美希望制定行为准则](https://www.rfi.fr/cn/%E5%9B%BD%E9%99%85/20230601-%E8%A7%86%E9%A2%91-%E7%9B%91%E7%AE%A1%E4%BA%BA%E5%B7%A5%E6%99%BA%E8%83%BD-%E6%AC%A7%E7%BE%8E%E5%B8%8C%E6%9C%9B%E5%88%B6%E5%AE%9A%E8%A1%8C%E4%B8%BA%E5%87%86%E5%88%99)
  ```5月31日，欧盟和美国宣布了一份关于人工智能的共同“行为准则”草案，该草案将在自愿的基础上适用于该行业，而此时世界主要大国正在制定监管人工智能的措施。```0
-  ## 6/1/2023 - [北约外长会议为乌克兰加入寻求妥协方案](https://www.rfi.fr/cn/%E5%9B%BD%E9%99%85/20230601-%E5%8C%97%E7%BA%A6%E5%A4%96%E9%95%BF%E4%BC%9A%E8%AE%AE%E4%B8%BA%E4%B9%8C%E5%85%8B%E5%85%B0%E5%8A%A0%E5%85%A5%E5%AF%BB%E6%B1%82%E5%A6%A5%E5%8D%8F%E6%96%B9%E6%A1%88)
- ```北约今天周四在奥斯陆举行非正式外长会议，议题包括：乌克兰的加入、秘书长斯托尔滕贝格的继任，以及军费开支跃升。外长们试图在7月份维尔纽斯北约峰会前，为这三个棘手问题找到折中方案。马克龙提到了美国对以色列保护承诺模式。```0
   ## 6/1/2023 - [【视频】欧元区通胀5月呈现走缓 但食品价格上涨仍然居高](https://www.rfi.fr/cn/%E6%AC%A7%E6%B4%B2/20230601-%E8%A7%86%E9%A2%91-%E6%AC%A7%E5%85%83%E5%8C%BA%E9%80%9A%E8%83%805%E6%9C%88%E5%91%88%E7%8E%B0%E8%B5%B0%E7%BC%93-%E4%BD%86%E9%A3%9F%E5%93%81%E4%BB%B7%E6%A0%BC%E4%B8%8A%E6%B6%A8%E4%BB%8D%E7%84%B6%E5%B1%85%E9%AB%98)
  ```5月份欧元区通胀率增速低于前几个月，通胀走缓的情况在法国、德国和意大利等国尤为明显，分析指主要原因是能源价格的大幅下降，但与此同时食品价格上涨仍然居高。```0
