--- a/新闻/英国广播公司.md
+++ b/新闻/英国广播公司.md
@@ -1,4 +1,6 @@
 
+  ## 6/2/2023 - [台美签署21世纪贸易倡议 北京称美对台“敲骨吸髓”](https://www.bbc.com/zhongwen/simp/business-65788057?at_medium=RSS&at_campaign=KARANGA)
+ ```台湾方面称，这是自1979年以来台美间最具规模、最全面性的贸易谈判所达成的阶段性成果。```0
   ## 6/2/2023 - [中国产大飞机C919：能否复制高铁的成功？](https://www.bbc.com/zhongwen/simp/business-65787318?at_medium=RSS&at_campaign=KARANGA)
  ```大飞机的发动机等关键部件，还在依赖欧美，有观点认为，在日益紧张的地缘政治格局下，随时面临技术“卡脖子”的危险。```0
   ## 6/1/2023 - [贵州毕节：记者采访教师溺亡事故时遭警察追踪殴打](https://www.bbc.com/zhongwen/simp/chinese-news-65776879?at_medium=RSS&at_campaign=KARANGA)
