--- a/新闻/德国之声.md
+++ b/新闻/德国之声.md
@@ -1,4 +1,8 @@
 
+  ## 6/2/2023 - [瑞士拒绝他国援乌瑞士军火 恪守中立引争议](https://www.dw.com/zh/瑞士拒绝他国援乌瑞士军火-恪守中立引争议/a-65803626?maca=chi-rss-chi-all-1127-rdf)
+ ```瑞士国民议院6月1日晚间投票否决了一项旨在允许第三国向乌克兰出售瑞士军火物资的法案。俄乌战争爆发以来，围绕是否应当恪守中立，瑞士各界展开了激烈争论。此法案被否决后，德国、丹麦等国无法向乌克兰转运瑞士军火。```0
+  ## 6/2/2023 - [台美贸易倡议签署协定 中国批美“掏空一中原则”](https://www.dw.com/zh/台美贸易倡议签署协定-中国批美-掏空一中原则/a-65803608?maca=chi-rss-chi-all-1127-rdf)
+ ```无视中国的反对，美国周四与台湾正式签署“21世纪贸易倡议”首批协定，深化双边经贸合作关系。中国外交部指责美国的做法是“虚化掏空一个中国原则的最新例证”。```0
   ## 6/2/2023 - [報告：中國投資開源情報 蒐集美軍資訊](https://www.dw.com/zh/報告：中國投資開源情報-蒐集美軍資訊/a-65801428?maca=chi-rss-chi-all-1127-rdf)
  ```一家美國情報公司的分析指出，中國官方和解放軍正在美國國防部、智庫和私營企業的公開數據，藉此更了解美軍的能力，其中也包含涉及跟台灣有關的防衛資訊。```0
   ## 6/2/2023 - [香港抹去六四記憶 文物保存寄望海外](https://www.dw.com/zh/香港抹去六四記憶-文物保存寄望海外/a-65801167?maca=chi-rss-chi-all-1127-rdf)
@@ -31,12 +35,8 @@
  ```德国总理肖尔茨的外交和安全政策顾问普吕特纳本周访问北京，会见王毅、秦刚等中国外事高官，中国媒体予以高调报道。但有关他中国之行的消息，在德国媒体乃至政府官方发布中都未见只字。```0
   ## 6/1/2023 - [财新PMI上升 中国经济复苏出现不一致信号](https://www.dw.com/zh/财新pmi上升-中国经济复苏出现不一致信号/a-65790590?maca=chi-rss-chi-all-1127-rdf)
  ```中国官方公布的制造业PMI显示工业生产继续萎缩。不过，经济杂志财新公布的PMI则显示工业生产处于扩张状态。但即便是财新的调查也显示，就业以及企业信心仍处于低位。```0
-  ## 6/1/2023 - [李尚福拒絕會晤 美防長：令人遺憾](https://www.dw.com/zh/李尚福拒絕會晤-美防長：令人遺憾/a-65766662?maca=chi-rss-chi-all-1127-rdf)
- ```《華爾街日報》29日報導，中國拒絕了美國提議雙方國防部長於新加坡會晤的請求。對此，美國防長奧斯汀表示「令人遺憾」，中國則要求美國「展現誠意」。為什麼中國拒絕此提議？```0
   ## 6/1/2023 - [中國國內旅遊熱 海外旅遊仍未達疫前水準](https://www.dw.com/zh/中國國內旅遊熱-海外旅遊仍未達疫前水準/a-65788012?maca=chi-rss-chi-all-1127-rdf)
  ```儘管中國今年初取消了旅行限制，中國國內旅遊也十分火熱，但中國公民的簽證申請量仍遠低於疫情前的水準，顯示中國旅客的國際旅遊尚未完全復甦。```0
-  ## 6/1/2023 - [紐約警官捲入中國「獵狐行動」案件開審](https://www.dw.com/zh/紐約警官捲入中國「獵狐行動」案件開審/a-65787904?maca=chi-rss-chi-all-1127-rdf)
- ```一名前紐約市警官被指控為中國特務，涉嫌恐嚇在美國的「中國逃犯」，試圖脅迫他們返回中國。美國週三在紐約針對涉及中國「獵狐行動」的此案，展開首次聯邦審判。```0
   ## 6/1/2023 - [涉嫌行賄 包凡拘留期遭延長3個月](https://www.dw.com/zh/涉嫌行賄-包凡拘留期遭延長3個月/a-65787901?maca=chi-rss-chi-all-1127-rdf)
  ```今年2月失蹤的中國華興資本董事長包凡，日前傳出拘留期遭延長三個月，跟其相關的華興資本香港證券子公司董事長叢林，拘留期也遭到繼續延長。```0
   ## 5/31/2023 - [德语媒体：北京拒绝中美防长对话](https://www.dw.com/zh/德语媒体：北京拒绝中美防长对话/a-65784653?maca=chi-rss-chi-all-1127-rdf)
@@ -63,8 +63,6 @@
  ```路透社引述知情人士报道，特斯拉CEO马斯克本周将访问中国。这将是三年来马斯克首次访华。```0
   ## 5/29/2023 - [德语媒体：“去风险”本身就会造成风险](https://www.dw.com/zh/德语媒体：-去风险-本身就会造成风险/a-65763774?maca=chi-rss-chi-all-1127-rdf)
  ```《商报》的一篇客座评论警告，北京正在努力让欧中相互依赖变成欧洲单方面依赖中国。《明镜周刊》则指出，在对华政策中“去风险”本身就会造成不小的风险，但总归比“脱钩”要好。```0
-  ## 5/29/2023 - [互取所需 沙特敲响“金砖银行”大门](https://www.dw.com/zh/互取所需-沙特敲响-金砖银行-大门/a-65762509?maca=chi-rss-chi-all-1127-rdf)
- ```《金融时报》披露，金砖国家的“新开发银行”正与沙特阿拉伯就加入成为第九个成员国展开谈判。分析人士指出，此举将强化与全球第二大产油国之间的联系，并且在创始成员国俄罗斯遭受西方制裁时增加金砖国家的融资选择。```0
   ## 5/29/2023 - [威尼斯大运河的水怎么变绿了？](https://www.dw.com/zh/威尼斯大运河的水怎么变绿了？/a-65762361?maca=chi-rss-chi-all-1127-rdf)
  ```当地警方表示，这种神秘的绿色液体不会对威尼斯人的健康构成威胁。```0
   ## 5/28/2023 - [墙外文摘：让种子飘落你家的花园，长出自由花](https://www.dw.com/zh/墙外文摘：让种子飘落你家的花园，长出自由花/a-65758791?maca=chi-rss-chi-all-1127-rdf)
