--- a/新闻/法国国际广播电台.md
+++ b/新闻/法国国际广播电台.md
@@ -1,8 +1,14 @@
 
+  ## 6/2/2023 - [中国又巨热 称考验电网](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20230602-%E4%B8%AD%E5%9B%BD%E5%8F%88%E5%B7%A8%E7%83%AD-%E7%A7%B0%E8%80%83%E9%AA%8C%E7%94%B5%E7%BD%91)
+ ```中国多地连续高温。经历了整个5月份的酷热天气后，中国南部和东部将继续面临持续数周的无情热浪。而且上海等特大城市也巨热，对空调的需求猛增，中国电网将承受巨大压力。```0
+  ## 6/2/2023 - [李辉回到北京称俄乌战争促和止战障碍很多](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20230602-%E6%9D%8E%E8%BE%89%E5%9B%9E%E5%88%B0%E5%8C%97%E4%BA%AC%E7%A7%B0%E4%BF%84%E4%B9%8C%E6%88%98%E4%BA%89%E4%BF%83%E5%92%8C%E6%AD%A2%E6%88%98%E9%9A%9C%E7%A2%8D%E5%BE%88%E5%A4%9A)
+ ```中国的乌克兰问题特使李辉周五在结束欧洲之行后返回北京。李辉借机说，有许多困难正在阻止俄罗斯和乌克兰在目前的情况下开始和平谈判。俄罗斯对李辉指责乌克兰是障碍。乌克兰对李辉说，乌克兰不接受割地冻结俄罗斯占领领土状况的停火谈判。```0
+  ## 6/2/2023 - [台湾与美国21世纪贸易倡议协定应有后续](https://www.rfi.fr/cn/%E4%BA%9A%E6%B4%B2/20230602-%E5%8F%B0%E6%B9%BE%E4%B8%8E%E7%BE%8E%E5%9B%BD21%E4%B8%96%E7%BA%AA%E8%B4%B8%E6%98%93%E5%80%A1%E8%AE%AE%E5%8D%8F%E5%AE%9A%E5%BA%94%E6%9C%89%E5%90%8E%E7%BB%AD)
+ ```台湾与美国关于21世纪贸易倡议首批协定1日于华府美国在台协会（AIT）总部由台湾驻美代表萧美琴与AIT执行理事蓝莺（IngridLarson）代表双方签署，据台湾行政院经贸谈判办公室强调，这项协定为台美经贸打下坚实的法律基础，未来极有机会发展为更广泛的自由贸易协定，且有助于台湾参加跨太平洋伙伴全面进步协定（CPTPP）。而协议下阶段议题与启动时程，目前考虑先处理劳工、环保与农业3个议题，但需要台湾再跟美方确认。```0
   ## 6/2/2023 - [美国可能采购日本炸药以生产炮弹军援乌克兰](https://www.rfi.fr/cn/%E4%BA%9A%E6%B4%B2/20230602-%E7%BE%8E%E5%9B%BD%E5%8F%AF%E8%83%BD%E9%87%87%E8%B4%AD%E6%97%A5%E6%9C%AC%E7%82%B8%E8%8D%AF%E4%BB%A5%E7%94%9F%E4%BA%A7%E7%82%AE%E5%BC%B9%E5%86%9B%E6%8F%B4%E4%B9%8C%E5%85%8B%E5%85%B0)
  ```乌克兰敦促盟国大力军援炮弹，以弥补弹药吃紧以及酝酿战略反攻。美国正寻求从日本采购炸药，用于155毫米炮弹的生产，供应给乌克兰，以帮助乌克兰以反击俄罗斯军队。```0
   ## 6/2/2023 - [中国高规格接待了马斯克](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20230602-%E4%B8%AD%E5%9B%BD%E9%AB%98%E8%A7%84%E6%A0%BC%E6%8E%A5%E5%BE%85%E4%BA%86%E9%A9%AC%E6%96%AF%E5%85%8B)
- ```特斯拉执行长马斯克自5月30日抵达中国到今天离境，受到官方拉高规格接待，其中包括正国级的中国国务院副总理丁薛祥及秦刚等3名部长。而他在中国网络上受到的瞩目，也非其他外企高管可比。美国媒体称，马斯克在中国是位名人，他的访问引起了中国网民的极大兴趣。中国官员利用马斯克访华之行来促进与美国的商业关系，尽管中国政府最近在以国家安全的名义打击一些外国公司。```0
+ ```特斯拉执行长马斯克自5月30日抵达中国到1日离境，受到官方拉高规格接待，其中包括正国级的中国国务院副总理丁薛祥及秦刚等3名部长。而他在中国网络上受到的瞩目，也非其他外企高管可比。美国媒体称，马斯克在中国是位名人，他的访问引起了中国网民的极大兴趣。中国官员利用马斯克访华之行来促进与美国的商业关系，尽管中国政府最近在以国家安全的名义打击一些外国公司。```0
   ## 6/2/2023 - [美国债务违约躲过一劫](https://www.rfi.fr/cn/%E7%BE%8E%E6%B4%B2/20230602-%E7%BE%8E%E5%9B%BD%E5%80%BA%E5%8A%A1%E8%BF%9D%E7%BA%A6%E8%BA%B2%E8%BF%87%E4%B8%80%E5%8A%AB)
  ```美国参议院1日稍晚通过了一项涉及广泛的立法，暂停31.4万亿美元的债务上限并削减联邦开支，推进了总统拜登和众议院议长麦卡锡达成的旨在避免前所未有的美国违约的两党协议。```0
   ## 6/2/2023 - [核武库：美国盯上中国](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20230602-%E6%A0%B8%E6%AD%A6%E5%BA%93-%E7%BE%8E%E5%9B%BD%E7%9B%AF%E4%B8%8A%E4%B8%AD%E5%9B%BD)
@@ -49,13 +55,7 @@
  ```乌克兰总统泽连斯基今天（6月1日）警告欧洲各国领袖，若他们在准许乌克兰加入北大西洋公约组织之前表现出任何怀疑态度，将使俄罗斯有机可乘。泽连斯基在「欧洲政治共同体」于东欧国家摩尔多瓦召开的峰会上致词时讲的这番话。```0
   ## 6/1/2023 - [越南促澳洲总理就南海问题发表强有力声明](https://www.rfi.fr/cn/%E5%9B%BD%E9%99%85/20230601-%E8%B6%8A%E5%8D%97%E4%BF%83%E6%BE%B3%E6%B4%B2%E6%80%BB%E7%90%86%E5%B0%B1%E5%8D%97%E6%B5%B7%E9%97%AE%E9%A2%98%E5%8F%91%E8%A1%A8%E5%BC%BA%E6%9C%89%E5%8A%9B%E5%A3%B0%E6%98%8E)
  ```越南驻澳大利亚大使说，河内欢迎澳洲总理阿尔巴尼斯（AnthonyAlbanese）就维护南海和平发表强有力的声明。河内和北京之间因中国最近入侵其专属经济区而出现了紧张关系。```0
-  ## 6/1/2023 - [【视频】世界无烟日：吸烟在日本仍然是公共卫生面临的一项挑战](https://www.rfi.fr/cn/%E4%BA%9A%E6%B4%B2/20230601-%E8%A7%86%E9%A2%91-%E4%B8%96%E7%95%8C%E6%97%A0%E7%83%9F%E6%97%A5-%E5%90%B8%E7%83%9F%E5%9C%A8%E6%97%A5%E6%9C%AC%E4%BB%8D%E7%84%B6%E6%98%AF%E5%85%AC%E5%85%B1%E5%8D%AB%E7%94%9F%E9%9D%A2%E4%B8%B4%E7%9A%84%E4%B8%80%E9%A1%B9%E6%8C%91%E6%88%98)
- ```5月31日是世界无烟日。二十年来，日本每天吸烟的人数从大约25%减少到了16%。但是烟草仍然是公共卫生面临的一项挑战，因为在日本每年有超过十三万人死于烟草。可是，反吸烟运动在这个岛国里仍然非常有限。```0
   ## 6/1/2023 - [人权观察谴责中国当局在天安门屠杀34年后禁止纪念活动](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20230601-%E4%BA%BA%E6%9D%83%E8%A7%82%E5%AF%9F%E8%B0%B4%E8%B4%A3%E4%B8%AD%E5%9B%BD%E5%BD%93%E5%B1%80%E5%9C%A8%E5%A4%A9%E5%AE%89%E9%97%A8%E5%B1%A0%E6%9D%8034%E5%B9%B4%E5%90%8E%E7%A6%81%E6%AD%A2%E7%BA%AA%E5%BF%B5%E6%B4%BB%E5%8A%A8)
  ```人权观察在天安门六四惨案前夕发布声明指出，在全球人民纪念1989年6月4日北京天安门广场大屠杀的时候，中国当局正在加大努力消除对这一事件的记忆。```0
   ## 6/1/2023 - [联合国减塑公约谈判：美中NGO如何与政府互动](https://www.rfi.fr/cn/%E4%B8%93%E6%A0%8F%E6%A3%80%E7%B4%A2/%E7%8E%AF%E5%A2%83%E4%B8%8E%E5%8F%91%E5%B1%95/20230601-%E8%81%94%E5%90%88%E5%9B%BD%E5%87%8F%E5%A1%91%E5%85%AC%E7%BA%A6%E8%B0%88%E5%88%A4-%E7%BE%8E%E4%B8%ADngo%E5%A6%82%E4%BD%95%E4%B8%8E%E6%94%BF%E5%BA%9C%E4%BA%92%E5%8A%A8)
  ```正在巴黎召开的联合国减低塑料污染公约谈判大会启动两天来连续为议事规则争论不休，试图在多数表决制与全体表决制中做出选择。如果说每一个国家无论其大小贫富都应该在联大享有同等的话语权的原则毋容置疑的话，在减低塑料污染问题上，各国所捍卫的利益及其所必需承担的责任显然不尽相同。公约对沙特阿拉伯等为塑料提供原材料的石油出口大国以及中美等塑料生产与消费大国所可能带来的影响显然大大高于其他国家，这也是为什么在减低塑料污染高雄心联盟的五十多个国家中并没有上述国家的影子。同气候谈判相类似，倘若塑料大国不能立刻采取措施推动生产转型，遏止塑料生产特别是一次性塑料产品的生产，那么，这些国家所衍生的塑料污染将会抵消其他国家的减塑努力。```0
-  ## 6/1/2023 - [【视频】监管人工智能：欧美希望制定行为准则](https://www.rfi.fr/cn/%E5%9B%BD%E9%99%85/20230601-%E8%A7%86%E9%A2%91-%E7%9B%91%E7%AE%A1%E4%BA%BA%E5%B7%A5%E6%99%BA%E8%83%BD-%E6%AC%A7%E7%BE%8E%E5%B8%8C%E6%9C%9B%E5%88%B6%E5%AE%9A%E8%A1%8C%E4%B8%BA%E5%87%86%E5%88%99)
- ```5月31日，欧盟和美国宣布了一份关于人工智能的共同“行为准则”草案，该草案将在自愿的基础上适用于该行业，而此时世界主要大国正在制定监管人工智能的措施。```0
-  ## 6/1/2023 - [【视频】欧元区通胀5月呈现走缓 但食品价格上涨仍然居高](https://www.rfi.fr/cn/%E6%AC%A7%E6%B4%B2/20230601-%E8%A7%86%E9%A2%91-%E6%AC%A7%E5%85%83%E5%8C%BA%E9%80%9A%E8%83%805%E6%9C%88%E5%91%88%E7%8E%B0%E8%B5%B0%E7%BC%93-%E4%BD%86%E9%A3%9F%E5%93%81%E4%BB%B7%E6%A0%BC%E4%B8%8A%E6%B6%A8%E4%BB%8D%E7%84%B6%E5%B1%85%E9%AB%98)
- ```5月份欧元区通胀率增速低于前几个月，通胀走缓的情况在法国、德国和意大利等国尤为明显，分析指主要原因是能源价格的大幅下降，但与此同时食品价格上涨仍然居高。```0
