--- a/新闻/英国广播公司.md
+++ b/新闻/英国广播公司.md
@@ -1,4 +1,6 @@
 
+  ## 6/2/2023 - [香格里拉对话会2023：世界待看中美防长“擦身而过”，台海朝鲜又添阴霾](https://www.bbc.com/zhongwen/simp/world-65788097?at_medium=RSS&at_campaign=KARANGA)
+ ```在中国国防部长李尚福拒绝会晤美国国防部长奥斯汀的背景下，世界安全首脑齐集新加坡观察两个大国如何唇枪舌剑。```0
   ## 6/2/2023 - [台美签署21世纪贸易倡议 北京称美对台“敲骨吸髓”](https://www.bbc.com/zhongwen/simp/business-65788057?at_medium=RSS&at_campaign=KARANGA)
  ```台湾方面称，这是自1979年以来台美间最具规模、最全面性的贸易谈判所达成的阶段性成果。```0
   ## 6/2/2023 - [中国产大飞机C919：能否复制高铁的成功？](https://www.bbc.com/zhongwen/simp/business-65787318?at_medium=RSS&at_campaign=KARANGA)
