--- a/新闻/德国之声.md
+++ b/新闻/德国之声.md
@@ -1,4 +1,6 @@
 
+  ## 6/2/2023 - [RCEP对15个签署国全面生效](https://www.dw.com/zh/rcep对15个签署国全面生效/a-65804548?maca=chi-rss-chi-all-1127-rdf)
+ ```据中国商务部官网消息，6月2日，《区域全面经济伙伴关系协定》（RCEP）对菲律宾正式生效，标志着RCEP对15个成员国全面生效。```0
   ## 6/2/2023 - [瑞士拒绝他国援乌瑞士军火 恪守中立引争议](https://www.dw.com/zh/瑞士拒绝他国援乌瑞士军火-恪守中立引争议/a-65803626?maca=chi-rss-chi-all-1127-rdf)
  ```瑞士国民议院6月1日晚间投票否决了一项旨在允许第三国向乌克兰出售瑞士军火物资的法案。俄乌战争爆发以来，围绕是否应当恪守中立，瑞士各界展开了激烈争论。此法案被否决后，德国、丹麦等国无法向乌克兰转运瑞士军火。```0
   ## 6/2/2023 - [台美贸易倡议签署协定 中国批美“掏空一中原则”](https://www.dw.com/zh/台美贸易倡议签署协定-中国批美-掏空一中原则/a-65803608?maca=chi-rss-chi-all-1127-rdf)
@@ -59,8 +61,6 @@
  ```美國及其盟友近日加大力度、限制中國獲得先進的半導體晶片製造設備。專家表示，這些措施可能影響中國相關產業的發展，但此舉也會對美國公司造成附帶損害。```0
   ## 5/29/2023 - [日本核废水排海在即 原子能机构再赴福岛审查](https://www.dw.com/zh/日本核废水排海在即-原子能机构再赴福岛审查/a-65763766?maca=chi-rss-chi-all-1127-rdf)
  ```日本政府今年夏天启动将福岛核电厂污水排入海洋的计划，但当地渔民和邻国至今对此强烈反对。日本希望国际原子能机构能提供协助，确保排放过程符合安全标准。```0
-  ## 5/29/2023 - [消息人士：马斯克本周将访问中国](https://www.dw.com/zh/消息人士：马斯克本周将访问中国/a-65763757?maca=chi-rss-chi-all-1127-rdf)
- ```路透社引述知情人士报道，特斯拉CEO马斯克本周将访问中国。这将是三年来马斯克首次访华。```0
   ## 5/29/2023 - [德语媒体：“去风险”本身就会造成风险](https://www.dw.com/zh/德语媒体：-去风险-本身就会造成风险/a-65763774?maca=chi-rss-chi-all-1127-rdf)
  ```《商报》的一篇客座评论警告，北京正在努力让欧中相互依赖变成欧洲单方面依赖中国。《明镜周刊》则指出，在对华政策中“去风险”本身就会造成不小的风险，但总归比“脱钩”要好。```0
   ## 5/29/2023 - [威尼斯大运河的水怎么变绿了？](https://www.dw.com/zh/威尼斯大运河的水怎么变绿了？/a-65762361?maca=chi-rss-chi-all-1127-rdf)
