--- a/新闻/法国国际广播电台.md
+++ b/新闻/法国国际广播电台.md
@@ -1,4 +1,8 @@
 
+  ## 6/2/2023 - [英国两报诽谤罪诉讼哈利要出庭作证 历史经验称或两败俱伤](https://www.rfi.fr/cn/%E6%AC%A7%E6%B4%B2/20230602-%E8%8B%B1%E5%9B%BD%E4%B8%A4%E6%8A%A5%E8%AF%BD%E8%B0%A4%E7%BD%AA%E8%AF%89%E8%AE%BC%E5%93%88%E5%88%A9%E8%A6%81%E5%87%BA%E5%BA%AD%E4%BD%9C%E8%AF%81-%E5%8E%86%E5%8F%B2%E7%BB%8F%E9%AA%8C%E7%A7%B0%E6%88%96%E4%B8%A4%E8%B4%A5%E4%BF%B1%E4%BC%A4)
+ ```英国哈里王子将成为130年来第一位在法庭上作证的高级英国皇室成员，下周他将在对他也参加指控的报业集团非法行为诉讼中作证。他出庭很可能会引起全世界的关注。英国王室一般避免卷入诉讼，因为王室担心不能控制诉讼走向，受两败俱伤威胁。```0
+  ## 6/2/2023 - [【视频】俄军对基辅空袭：致3人死亡，包括一名儿童](https://www.rfi.fr/cn/%E5%9B%BD%E9%99%85/20230602-%E8%A7%86%E9%A2%91-%E4%BF%84%E5%86%9B%E5%AF%B9%E5%9F%BA%E8%BE%85%E7%A9%BA%E8%A2%AD-%E8%87%B43%E4%BA%BA%E6%AD%BB%E4%BA%A1%EF%BC%8C%E5%8C%85%E6%8B%AC%E4%B8%80%E5%90%8D%E5%84%BF%E7%AB%A5)
+ ```6月1日(星期四)凌晨，俄罗斯再次对基辅发动空袭，造成至少3人死亡，其中包括一名儿童。据乌克兰军方表示，俄军当天向基辅发射了约10枚弹道导弹，乌克兰防空系统拦截了所有这些导弹，但坠落的弹片造成了人员伤亡和设施受损。```0
   ## 6/2/2023 - [中国又巨热 称考验电网](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20230602-%E4%B8%AD%E5%9B%BD%E5%8F%88%E5%B7%A8%E7%83%AD-%E7%A7%B0%E8%80%83%E9%AA%8C%E7%94%B5%E7%BD%91)
  ```中国多地连续高温。经历了整个5月份的酷热天气后，中国南部和东部将继续面临持续数周的无情热浪。而且上海等特大城市也巨热，对空调的需求猛增，中国电网将承受巨大压力。```0
   ## 6/2/2023 - [李辉回到北京称俄乌战争促和止战障碍很多](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20230602-%E6%9D%8E%E8%BE%89%E5%9B%9E%E5%88%B0%E5%8C%97%E4%BA%AC%E7%A7%B0%E4%BF%84%E4%B9%8C%E6%88%98%E4%BA%89%E4%BF%83%E5%92%8C%E6%AD%A2%E6%88%98%E9%9A%9C%E7%A2%8D%E5%BE%88%E5%A4%9A)
@@ -55,7 +59,3 @@
  ```乌克兰总统泽连斯基今天（6月1日）警告欧洲各国领袖，若他们在准许乌克兰加入北大西洋公约组织之前表现出任何怀疑态度，将使俄罗斯有机可乘。泽连斯基在「欧洲政治共同体」于东欧国家摩尔多瓦召开的峰会上致词时讲的这番话。```0
   ## 6/1/2023 - [越南促澳洲总理就南海问题发表强有力声明](https://www.rfi.fr/cn/%E5%9B%BD%E9%99%85/20230601-%E8%B6%8A%E5%8D%97%E4%BF%83%E6%BE%B3%E6%B4%B2%E6%80%BB%E7%90%86%E5%B0%B1%E5%8D%97%E6%B5%B7%E9%97%AE%E9%A2%98%E5%8F%91%E8%A1%A8%E5%BC%BA%E6%9C%89%E5%8A%9B%E5%A3%B0%E6%98%8E)
  ```越南驻澳大利亚大使说，河内欢迎澳洲总理阿尔巴尼斯（AnthonyAlbanese）就维护南海和平发表强有力的声明。河内和北京之间因中国最近入侵其专属经济区而出现了紧张关系。```0
-  ## 6/1/2023 - [人权观察谴责中国当局在天安门屠杀34年后禁止纪念活动](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20230601-%E4%BA%BA%E6%9D%83%E8%A7%82%E5%AF%9F%E8%B0%B4%E8%B4%A3%E4%B8%AD%E5%9B%BD%E5%BD%93%E5%B1%80%E5%9C%A8%E5%A4%A9%E5%AE%89%E9%97%A8%E5%B1%A0%E6%9D%8034%E5%B9%B4%E5%90%8E%E7%A6%81%E6%AD%A2%E7%BA%AA%E5%BF%B5%E6%B4%BB%E5%8A%A8)
- ```人权观察在天安门六四惨案前夕发布声明指出，在全球人民纪念1989年6月4日北京天安门广场大屠杀的时候，中国当局正在加大努力消除对这一事件的记忆。```0
-  ## 6/1/2023 - [联合国减塑公约谈判：美中NGO如何与政府互动](https://www.rfi.fr/cn/%E4%B8%93%E6%A0%8F%E6%A3%80%E7%B4%A2/%E7%8E%AF%E5%A2%83%E4%B8%8E%E5%8F%91%E5%B1%95/20230601-%E8%81%94%E5%90%88%E5%9B%BD%E5%87%8F%E5%A1%91%E5%85%AC%E7%BA%A6%E8%B0%88%E5%88%A4-%E7%BE%8E%E4%B8%ADngo%E5%A6%82%E4%BD%95%E4%B8%8E%E6%94%BF%E5%BA%9C%E4%BA%92%E5%8A%A8)
- ```正在巴黎召开的联合国减低塑料污染公约谈判大会启动两天来连续为议事规则争论不休，试图在多数表决制与全体表决制中做出选择。如果说每一个国家无论其大小贫富都应该在联大享有同等的话语权的原则毋容置疑的话，在减低塑料污染问题上，各国所捍卫的利益及其所必需承担的责任显然不尽相同。公约对沙特阿拉伯等为塑料提供原材料的石油出口大国以及中美等塑料生产与消费大国所可能带来的影响显然大大高于其他国家，这也是为什么在减低塑料污染高雄心联盟的五十多个国家中并没有上述国家的影子。同气候谈判相类似，倘若塑料大国不能立刻采取措施推动生产转型，遏止塑料生产特别是一次性塑料产品的生产，那么，这些国家所衍生的塑料污染将会抵消其他国家的减塑努力。```0
