--- a/新闻/法国国际广播电台.md
+++ b/新闻/法国国际广播电台.md
@@ -1,4 +1,8 @@
 
+  ## 6/2/2023 - [面对中国导弹威胁 美国在亚洲采取新军事策略](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20230602-%E9%9D%A2%E5%AF%B9%E4%B8%AD%E5%9B%BD%E5%AF%BC%E5%BC%B9%E5%A8%81%E8%83%81-%E7%BE%8E%E5%9B%BD%E5%9C%A8%E4%BA%9A%E6%B4%B2%E9%87%87%E5%8F%96%E6%96%B0%E5%86%9B%E4%BA%8B%E7%AD%96%E7%95%A5)
+ ```美国在亚洲采取新军事策略，包括通过将武器装备、部队和指挥所分散到各地前哨基地，美国希望使中国更难通过削弱任何单一军事设施来发动决定性打击。```0
+  ## 6/2/2023 - [与美国对航的中国航班可能不再飞俄罗斯上空航线](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20230602-%E4%B8%8E%E7%BE%8E%E5%9B%BD%E5%AF%B9%E8%88%AA%E7%9A%84%E4%B8%AD%E5%9B%BD%E8%88%AA%E7%8F%AD%E5%8F%AF%E8%83%BD%E4%B8%8D%E5%86%8D%E9%A3%9E%E4%BF%84%E7%BD%97%E6%96%AF%E4%B8%8A%E7%A9%BA%E8%88%AA%E7%BA%BF)
+ ```路透社引述根据航班跟踪网站FlightAware和行业官员的说法，中国航空公司或避免在新批准的往返美国的航班中飞越俄罗斯领空。中美互飞如果飞越俄罗斯上空路线，路程与耗油明显有不同，中俄关系与美俄关系有天壤之别。```0
   ## 6/2/2023 - [英国两报诽谤罪诉讼哈利要出庭作证 历史经验称或两败俱伤](https://www.rfi.fr/cn/%E6%AC%A7%E6%B4%B2/20230602-%E8%8B%B1%E5%9B%BD%E4%B8%A4%E6%8A%A5%E8%AF%BD%E8%B0%A4%E7%BD%AA%E8%AF%89%E8%AE%BC%E5%93%88%E5%88%A9%E8%A6%81%E5%87%BA%E5%BA%AD%E4%BD%9C%E8%AF%81-%E5%8E%86%E5%8F%B2%E7%BB%8F%E9%AA%8C%E7%A7%B0%E6%88%96%E4%B8%A4%E8%B4%A5%E4%BF%B1%E4%BC%A4)
  ```英国哈里王子将成为130年来第一位在法庭上作证的高级英国皇室成员，下周他将在对他也参加指控的报业集团非法行为诉讼中作证。他出庭很可能会引起全世界的关注。英国王室一般避免卷入诉讼，因为王室担心不能控制诉讼走向，受两败俱伤威胁。```0
   ## 6/2/2023 - [【视频】俄军对基辅空袭：致3人死亡，包括一名儿童](https://www.rfi.fr/cn/%E5%9B%BD%E9%99%85/20230602-%E8%A7%86%E9%A2%91-%E4%BF%84%E5%86%9B%E5%AF%B9%E5%9F%BA%E8%BE%85%E7%A9%BA%E8%A2%AD-%E8%87%B43%E4%BA%BA%E6%AD%BB%E4%BA%A1%EF%BC%8C%E5%8C%85%E6%8B%AC%E4%B8%80%E5%90%8D%E5%84%BF%E7%AB%A5)
@@ -55,7 +59,3 @@
  ```美国国防部长奥斯汀（LloydAustin）6月1日在东京出席新闻发布会时表示，中方拒绝了由美方提出在本周新加坡香格里拉对话会期间举行两国防长会议的提议是“不幸的”，双方间持续缺乏沟通或将导致“一个可能非常、非常迅速地失去控制的事件”。```0
   ## 6/1/2023 - [联合国表示对中国政府高层缺乏女性感到担忧](https://www.rfi.fr/cn/%E5%9B%BD%E9%99%85/20230601-%E8%81%94%E5%90%88%E5%9B%BD%E8%A1%A8%E7%A4%BA%E5%AF%B9%E4%B8%AD%E5%9B%BD%E6%94%BF%E5%BA%9C%E9%AB%98%E5%B1%82%E7%BC%BA%E4%B9%8F%E5%A5%B3%E6%80%A7%E6%84%9F%E5%88%B0%E6%8B%85%E5%BF%A7)
  ```中国政府高层没有女性和中国女性人权维护者受恐吓骚扰的情况引发联合国担忧。路透社引述说，习近平担任总书记十年间，妇女在政治和政府精英角色中的人数下降，在劳动力中的性别差距扩大。```0
-  ## 6/1/2023 - [泽连斯基：不想遭到俄国蚕食的欧洲国家，都应该是欧盟和北约的正式成员](https://www.rfi.fr/cn/%E6%AC%A7%E6%B4%B2/20230601-%E6%B3%BD%E8%BF%9E%E6%96%AF%E5%9F%BA-%E4%B8%8D%E6%83%B3%E9%81%AD%E5%88%B0%E4%BF%84%E5%9B%BD%E8%9A%95%E9%A3%9F%E7%9A%84%E6%AC%A7%E6%B4%B2%E5%9B%BD%E5%AE%B6%EF%BC%8C%E9%83%BD%E5%BA%94%E8%AF%A5%E6%98%AF%E6%AC%A7%E7%9B%9F%E5%92%8C%E5%8C%97%E7%BA%A6%E7%9A%84%E6%AD%A3%E5%BC%8F%E6%88%90%E5%91%98)
- ```乌克兰总统泽连斯基今天（6月1日）警告欧洲各国领袖，若他们在准许乌克兰加入北大西洋公约组织之前表现出任何怀疑态度，将使俄罗斯有机可乘。泽连斯基在「欧洲政治共同体」于东欧国家摩尔多瓦召开的峰会上致词时讲的这番话。```0
-  ## 6/1/2023 - [越南促澳洲总理就南海问题发表强有力声明](https://www.rfi.fr/cn/%E5%9B%BD%E9%99%85/20230601-%E8%B6%8A%E5%8D%97%E4%BF%83%E6%BE%B3%E6%B4%B2%E6%80%BB%E7%90%86%E5%B0%B1%E5%8D%97%E6%B5%B7%E9%97%AE%E9%A2%98%E5%8F%91%E8%A1%A8%E5%BC%BA%E6%9C%89%E5%8A%9B%E5%A3%B0%E6%98%8E)
- ```越南驻澳大利亚大使说，河内欢迎澳洲总理阿尔巴尼斯（AnthonyAlbanese）就维护南海和平发表强有力的声明。河内和北京之间因中国最近入侵其专属经济区而出现了紧张关系。```0
