--- a/新闻/自由亚洲电台亚太.md
+++ b/新闻/自由亚洲电台亚太.md
@@ -1,12 +1,12 @@
 
   ## 6/2/2023 - [天安门难属坚持六四祭至亲 香港前支联会成员变通悼六四](https://www.rfa.org/mandarin/yataibaodao/renquanfazhi/ec-06022023035917.html)
- ```本周日是六四事件34周年，天安门母亲发言人尤维洁表示，当天惨况无法忘怀，坚持争取至真相大白方休。另外，《国安法》使香港不能再举办六四纪念活动，支联会的前常委和义工，各自以不同的方法，守护这段被变成敏感词的历史。还有2天是六四屠杀34周年，"天安门母亲"发言人尤维洁对本台表示，每年这段时间，她都会想起六四当天的情况。尤维洁："我是一个遇难者的亲属，我的心情一到这个时候是不会很舒畅的，因为当年六四惨案，我所看到的，在首都北京十里长安街上，动用军队屠杀平民百姓这一举动，太令人震惊了。我在医院里头各种各样的情景，依然就像发生在昨天的事情一样，历历在目，在我心里头一点一滴，我都没有忘记。"尤维洁表示，本周日是疫情后的首个六四忌日，家属们会坚持到万安公墓祭奠和发表祭文，表达对家人的哀思。她表示，"天安门母亲"发起人丁子霖和张先玲，身体状况还好，但不少成员正与时间竞赛，希望能争取"真相、赔偿和问责"的三大诉求尽快实现。尤维洁："有很多的当年失去儿女的母亲、父亲们，年纪都在八十岁以上，会有一些老年病，这是我们也很担忧的一件事，我们都很希望他们在能在有生之年，能看到六四惨案被公诸于世，能够得到解决，能够安慰他们非常痛苦的心。"对于今年全球多地都有六四的悼念活动，尤维洁感谢大家对六四惨案的关注，也感谢已解散的香港支联会，为悼念留下30多年的烛光。支联会前副主席蔡耀昌：支联会虽解散人民不会忘记在《国安法》实施后，支联会解散，多名前常委先后被起诉，前副主席蔡耀昌也曾因为六四集会被判刑。他相信，他与坚持多年的支联会成员，以及无数曾举起烛光悼念的港人，都不会因为没有晚会而忘记六四。蔡耀昌："不会像过去三十年，每年都有大型的集会，不过，支联会从1989到2019的30年，我们至少能做到，使六四的议题没有被消失，我相信有很多香港人都清楚知道，89年的六四发生过什么事，相信香港人会用自己的方法，继续表达自己的看法，人民不会忘记。"对于今年六四期间，香港维园会变身成亲中社团举办庆回归的市集，港府高层更提早放话，警告不要利用"特别日子"做危害国家的行为。蔡耀昌认为，港府的反应过大。蔡耀昌："我当然不明白有关的社团组织为何要在六四前后，在维园办市集？是否有政治目的，可能要他们自己解答。我明白现在的政治环境已改变，但大多数的港人，不会想搞乱香港和危害国家安全，太多的上纲上线，对香港以至整个中国都不是好事。"蔡耀昌表示，六四当晚会在私人地方静默悼念，相信身陷囹圄的多名支联前骨干，也会用自己的方法，纪念这段悲痛的历史。六四剧本编录成书三语出版编者列明慧：尽普通人力量守护真相"六四舞台"主席列明慧选择以文字和艺术，记载六四和香港的故事。她接受本台访问表示，舞台剧《5月35日》从首演到无法公演，是香港《国安法》的历史见证。在六四34周年前夕，她把这出记载时代的舞台剧本，编成广东话、国语和英语三种语言。在台湾版的剧本，希望把六四和香港的故事延续，在记忆与遗忘战中，尽小市民的一份力量。列明慧："有《国安法》后，很多离散的港人经常在想，我们还可以做什么？在有些事可能会被官方抹去痕迹，我们除了自己要记着之外，也要把这些历史留存下来，我们要做很多的记录，例如我们的剧本，剧本的书在香港不能出版，我们去台湾印，在香港无法演，我们去其他地方和用不同的语言去演，这些都是我们能做到的抗争方式。"列明慧表示，艺术有力量让不同地方的人了解不公义的事，不仅发生在1989年的6月4日，以及天安门母亲等难属身上。她期望三语剧本集，能使《5月35日》在全球不同地方，通过不同的语言公演，提高当地人对六四和香港的认识，再了解香港现在所经历的困难。"记者：陈子非责编陈美华许书婷```0
+ ```本周日是六四事件34周年，天安门母亲发言人尤维洁表示，当天惨况无法忘怀，坚持争取至真相大白方休。另外，《国安法》使香港不能再举办六四纪念活动，支联会的前常委和义工各自以不同的方法守护这段被变成敏感词的历史。中共如何令十四亿人患了"六四失忆症"？【我是怎么知道六四的】来信节选还有两天就是六四屠杀34周年，"天安门母亲"发言人尤维洁对本台表示，每年这段时间，她都会想起六四当天的情况。尤维洁："我是一个遇难者的亲属，我的心情一到这个时候是不会很舒畅的，因为当年六四惨案，我所看到的，在首都北京十里长安街上，动用军队屠杀平民百姓这一举动，太令人震惊了。我在医院里头各种各样的情景，依然就像发生在昨天的事情一样，历历在目，在我心里头一点一滴，我都没有忘记。"尤维洁表示，本周日是疫情后的首个六四忌日，家属们会坚持到万安公墓祭奠和发表祭文，表达对家人的哀思。她表示，"天安门母亲"发起人丁子霖和张先玲，身体状况还好，但不少成员正与时间竞赛，希望能争取"真相、赔偿和问责"的三大诉求尽快实现。尤维洁："有很多的当年失去儿女的母亲、父亲们，年纪都在八十岁以上，会有一些老年病，这是我们也很担忧的一件事，我们都很希望他们在能在有生之年，能看到六四惨案被公诸于世，能够得到解决，能够安慰他们非常痛苦的心。"对于今年全球多地都有六四的悼念活动，尤维洁感谢大家对六四惨案的关注，也感谢已解散的香港支联会，为悼念留下30多年的烛光。支联会前副主席蔡耀昌：支联会虽解散人民不会忘记在《国安法》实施后，支联会解散，多名前常委先后被起诉，前副主席蔡耀昌也曾因为六四集会被判刑。他相信，他与坚持多年的支联会成员，以及无数曾举起烛光悼念的港人，都不会因为没有晚会而忘记六四。蔡耀昌："不会像过去三十年，每年都有大型的集会，不过，支联会从1989到2019的30年，我们至少能做到，使六四的议题没有被消失，我相信有很多香港人都清楚知道，89年的六四发生过什么事，相信香港人会用自己的方法，继续表达自己的看法，人民不会忘记。"对于今年六四期间，香港维园会变身成亲中社团举办庆回归的市集，港府高层更提早放话，警告不要利用"特别日子"做危害国家的行为。蔡耀昌认为，港府的反应过大。蔡耀昌："我当然不明白有关的社团组织为何要在六四前后，在维园办市集？是否有政治目的，可能要他们自己解答。我明白现在的政治环境已改变，但大多数的港人，不会想搞乱香港和危害国家安全，太多的上纲上线，对香港以至整个中国都不是好事。"蔡耀昌表示，六四当晚会在私人地方静默悼念，相信身陷囹圄的多名支联前骨干，也会用自己的方法，纪念这段悲痛的历史。六四剧本编录成书三语出版编者列明慧：尽普通人力量守护真相"六四舞台"主席列明慧选择以文字和艺术，记载六四和香港的故事。她接受本台访问表示，舞台剧《5月35日》从首演到无法公演，是香港《国安法》的历史见证。在六四34周年前夕，她把这出记载时代的舞台剧本，编成广东话、国语和英语三种语言。在台湾版的剧本，希望把六四和香港的故事延续，在记忆与遗忘战中，尽小市民的一份力量。列明慧："有《国安法》后，很多离散的港人经常在想，我们还可以做什么？在有些事可能会被官方抹去痕迹，我们除了自己要记着之外，也要把这些历史留存下来，我们要做很多的记录，例如我们的剧本，剧本的书在香港不能出版，我们去台湾印，在香港无法演，我们去其他地方和用不同的语言去演，这些都是我们能做到的抗争方式。"列明慧表示，艺术有力量让不同地方的人了解不公义的事，不仅发生在1989年的6月4日，以及天安门母亲等难属身上。她期望三语剧本集，能使《5月35日》在全球不同地方，通过不同的语言公演，提高当地人对六四和香港的认识，再了解香港现在所经历的困难。"记者：陈子非责编陈美华许书婷```0
   ## 6/2/2023 - [六四34周年 安保堪比二十大 异议人士被上岗或旅游](https://www.rfa.org/mandarin/yataibaodao/renquanfazhi/gt-06022023021308.html)
- ```六四34周年日前夕，中国多地实施禁止民间集会的严控措施。北京异议人士查建国，六四伤残人士齐志勇被上岗，独立媒体人高瑜被带到河南旅游，成都秋雨教会信徒被公安“维稳”，贵州人权研讨会部分成员被旅游等。据说今年的六四维稳期约10日，其严厉程度堪比中共二十大安保。六四34周年日临近，北京、湖南、四川、安徽、湖北及贵州等地异议人士、人权组织或知名维权人士，被警方上岗或者强制旅游。据一位知情人士本周五（6月2日）告诉本台，北京独立媒体人高瑜被公安带到河南洛阳旅游：“高大姐被旅游了，在河南”。贵州一位日前接到公安警告，不得接受采访的异议人士告诉本台：“贵州人权研讨会的陈西、李任科、廖双元、黄燕明等十多名成员被上岗或者被带到贵阳郊区农家乐和度假村。国保像往年一样，待到六四周年日结束后，才能回到贵阳家中。”这位人士还说，两天前，北京异议人士查建国、何德普、江棋生，六四伤残者齐志勇等至少十人被上岗，八九学运参与者季风则被带到贵州省桐梓县旅游。正在贵州家乡的季风对本台证实，他被旅游期间不得接受媒体采访：“所有的媒体采访我，现在都被我拒绝。因为跟我打了招呼，不让我接受采访。我说我可不可以发照片，连照片都不能发。江棋生没消息，电话打不通。这就像二十大期间，绝对不能发照片。”合肥警方上门要带八九参与者沈良庆旅游另一位八九学运参与者，安徽合肥异议人士沈良庆告诉本台，当地公安已经通知他在六四周年日期间，须接受监控：“前几天，合肥市公安局国保支队和包河分局国保大队找我谈过话，说准备带我出去旅游，明天就要出去旅游。他们肯定会要求这几天不能谈六四话题。再有，我在旅游期间肯定是处在软禁状态。”湖南株洲多位接到公安警告的异议人士告诉本台，当局此次严控程度相当于中共二十大会议期间。其中一位陈先生说，警察周五早上刚到过他家：“他（国保）刚上我家来，才走了10分钟，因为六四这件事，说要来看守我，实施管控，可能持续到6月6日，我对此也没办法。我们这里不久前还拘留一个人叫陈思明，因为他在发推特（六四图片）。可能会被刑事拘留，因为他已被拘留4到5次了。”成都警方六四周年日与活跃人士“聚餐”在四川成都，当地异议人士宋先生告诉本台，四川环保作家谭作人，已被警方带走旅游，成都秋雨教会的多位活跃人士也被公安“打招呼”，在六四周年日当天，由警方安排“聚餐”。他说：“秋雨教会比较活跃的一些会友，这一、两天收到（国保）打招呼，我也接到电话，6月4日那一天，要被（国保）约出去吃个饭。谭作人每年六四都要被带出去旅游。”除了异议人士被监控，维权人士也被当局纳入控制范围。武汉维权人士周先生对本台说：“我们这些人虽然跟六四挂不上勾，但是现在六四异议人士该旅游的被旅游了。我们这些维权者也被国保当作所谓维稳的一部分。”每年的六四周年日，中国警方都会控制异议人士。有舆论认为，这是因为当局担心这些人士举行纪念活动或者发表相关言论，而这些活动和言论都被认为是对当局的挑战和批评。此外，中国政府一直试图掩盖、歪曲六四的真相，并禁止公民自由地表达对该事件的看法。因此，在这个敏感时期，警方会加强管控以维护政治秩序。记者古亭责编陈美华许书婷```0
+ ```六四34周年日前夕，中国多地实施禁止民间集会的严控措施。北京异议人士查建国，六四伤残人士齐志勇被上岗，独立媒体人高瑜被带到河南旅游，成都秋雨教会信徒被公安"维稳"，贵州人权研讨会部分成员被旅游等。据说今年的六四维稳期约十天，其严厉程度堪比中共二十大安保。六四前夕许志永狱中呼吁　以禁食悼念"六四"【我是怎么知道六四的】来信节选六四34周年日临近，北京、湖南、四川、安徽、湖北及贵州等地异议人士、人权组织或知名维权人士，被警方上岗或者强制旅游。据一位知情人士本周五（6月2日）告诉本台，北京独立媒体人高瑜被公安带到河南洛阳旅游：“高大姐被旅游了，在河南”。贵州一位日前接到公安警告，不得接受采访的异议人士告诉本台：“贵州人权研讨会的陈西、李任科、廖双元、黄燕明等十多名成员被上岗或者被带到贵阳郊区农家乐和度假村。国保像往年一样，待到六四周年日结束后，才能回到贵阳家中。”这位人士还说，两天前，北京异议人士查建国、何德普、江棋生，六四伤残者齐志勇等至少十人被上岗，八九学运参与者季风则被带到贵州省桐梓县旅游。正在贵州家乡的季风对本台证实，他被旅游期间不得接受媒体采访：“所有的媒体采访我，现在都被我拒绝。因为跟我打了招呼，不让我接受采访。我说我可不可以发照片，连照片都不能发。江棋生没消息，电话打不通。这就像二十大期间，绝对不能发照片。”合肥警方上门要带八九参与者沈良庆旅游另一位八九学运参与者，安徽合肥异议人士沈良庆告诉本台，当地公安已经通知他在六四周年日期间，须接受监控：“前几天，合肥市公安局国保支队和包河分局国保大队找我谈过话，说准备带我出去旅游，明天就要出去旅游。他们肯定会要求这几天不能谈六四话题。再有，我在旅游期间肯定是处在软禁状态。”湖南株洲多位接到公安警告的异议人士告诉本台，当局此次严控程度相当于中共二十大会议期间。其中一位陈先生说，警察周五早上刚到过他家：“他（国保）刚上我家来，才走了10分钟，因为六四这件事，说要来看守我，实施管控，可能持续到6月6日，我对此也没办法。我们这里不久前还拘留一个人叫陈思明，因为他在发推特（六四图片）。可能会被刑事拘留，因为他已被拘留4到5次了。”成都警方六四周年日与活跃人士“聚餐”在四川成都，当地异议人士宋先生告诉本台，四川环保作家谭作人，已被警方带走旅游，成都秋雨教会的多位活跃人士也被公安“打招呼”，在六四周年日当天，由警方安排“聚餐”。他说：“秋雨教会比较活跃的一些会友，这一、两天收到（国保）打招呼，我也接到电话，6月4日那一天，要被（国保）约出去吃个饭。谭作人每年六四都要被带出去旅游。”除了异议人士被监控，维权人士也被当局纳入控制范围。武汉维权人士周先生对本台说：“我们这些人虽然跟六四挂不上勾，但是现在六四异议人士该旅游的被旅游了。我们这些维权者也被国保当作所谓维稳的一部分。”每年的六四周年日，中国警方都会控制异议人士。有舆论认为，这是因为当局担心这些人士举行纪念活动或者发表相关言论，而这些活动和言论都被认为是对当局的挑战和批评。此外，中国政府一直试图掩盖、歪曲六四的真相，并禁止公民自由地表达对该事件的看法。因此，在这个敏感时期，警方会加强管控以维护政治秩序。记者古亭责编陈美华许书婷```0
   ## 6/1/2023 - [六四纪念馆召开揭幕记者会 　王丹：为未来储备动力](https://www.rfa.org/mandarin/yataibaodao/renquanfazhi/tj-06012023154632.html)
  ```由1989年天安门学运领袖筹建的六四纪念馆即将于6月2日在纽约曼哈顿开馆。为此，纪念馆筹备团队在本周四召开揭幕记者会。多位六四学运领袖在会上谈及创立纪念馆的意义以及对中国民主运动的展望。 专栏：六四34周年　纽约六四纪念馆展现什么？"六四"34周年　纪念馆凝聚两代人民主抗争精神 本周四，多位1989年天安门民主运动领袖在纽约曼哈顿召开了六四纪念馆揭幕记者会，王丹、周锋锁、当年的工人运动领袖吕京花等与会出席。王丹在会上表示，六四纪念馆会在纽约设立是因为香港当局在2021年关闭了在香港的六四纪念馆：“中国当局的意图很明显，他们想掩盖历史，让世界忘记中国当局犯的罪，他们希望大家忘记共产党是建立在暴力及谎言的政权。”王丹指出，透过六四纪念馆，让世人记住1989年的天安门民主运动是件相当重要的事：“1989年是中国近代历史最重要的转折点，比较1989年之前以及过后，会发现中国是两个完全不同的国家。……六四在中国至今依旧是很敏感的话题，它代表着政治反动，我们要维持这股反对力量，并为未来储备动力。纪念六四不仅是为了我们，也是为了中国；不只是为了过去，也是为了未来。”周锋锁：纪念馆展品很多来自六四参与者周锋锁也谈到，纪念馆象征着1989年民主运动世代以及“白纸运动”年轻世代对于民主中国的渴望：“我们抱有希望，不管我们如何被打败，也无论我们还要经过什么样的难关，民主中国的梦一直都存在。我们会团结在一起，就像34年前在天安门广场一样，全世界的人都看到我们对自由中国的梦想。”周锋锁指出，纪念馆中的文物很多是来自六四运动参与者的捐赠：“长期以来，我都在援助因为六四被关押的政治犯，很多人都因为1989年的民运被中国当局起诉，所以我们组建了信息联络网，这也是为何这些展品会到我这边。这些参与者希望这些展品能被展示、保存，同时他们也希望身份能被保护。”六四纪念馆馆长于大海向本台介绍馆藏文物（记者唐缘媛摄）现场众多年轻志愿者　王丹：大家都有自由中国梦在纪念馆的会场中，有众多年轻人参与筹备工作，当中不乏有仍打算回国的中国留学生。针对有关这些青年人是受到什么样的鼓舞，才愿意冒着被中国当局秋后算帐的风险前往纪念馆帮忙的问题，王丹解释道：“我们两代人分享着一样的价值观，我们都希望中国可以变民主。很多的年轻志愿者来自‘白纸运动’世代，但我们分享着同样的梦想，这就是为什么他们参与纪念馆的活动。”推特充斥六四纪念馆假帐号　王丹：面对网军已有所准备在六四纪念馆开幕前夕，社群平台推特上出现大量六四纪念馆的虚假帐号，并试图骗取支持者捐款。王丹就此接受本台记者采访表示，他们对于中国网军的攻击、威胁已有所准备，并没有特别忧心。王丹说：“被网军骚扰和在未来可能遇到一些麻烦，这都是预料之中的。这样的一个纪念馆显然会是中共及中共驻外使领馆的眼中钉、肉中刺，这个是完全可以理解的，但是我们也有做相应的准备。坦率讲，如果有人来捣乱的话，我敢保证他马上会被FBI（美国联邦调查局）发现。我们跟相关单位有做一定的准备，美国政府对此也是了解的。” 记者：唐缘媛   责编：何平   网编：洪伟```0
   ## 6/1/2023 - [又逢儿童节  中国流动人口子女状况惹关注](https://www.rfa.org/mandarin/yataibaodao/shehui/wy-06012023141816.html)
- ```今年6月1日是第73个国际儿童节。中国非政府组织“新公民计划”日前发布《2023中国流动人口子女现状》，揭示出当前中国流动人口子女的生存状况。由于父母在中国不同城市迁徙，这个庞大的未成年人群体正遭遇什么样的挑战？ 后浪：输在起跑线上的孩子"留守儿童"家庭现状：团聚少问题多 根据联合国《儿童权利公约》的定义，儿童是指18岁以下的人口。如果不看数字，常人似乎很难想象，中国流动人口的子女人数已经达到1.38亿，占了中国儿童总数的近一半（46%）。也就是说，两个中国儿童中，就有一个是流动人口的子女。“新公民计划”的最新报告《2023中国流动人口子女现状：事实和数据》对此作了详实的研究，数据来源包括国家统计局第七次全国人口普查、《2020年中国人口普查年鉴》及历次人口普查和调查数据中关于中国儿童人口的描述分析，以及中国国家统计局、联合国儿童基金会、联合国人口基金联合发布的《2020年中国儿童人口状况：事实与数据》等等。在一起！在一起？作为儿童，与父母生活在一起似乎是天经地义。但对于中国的流动人口子女来说，与父母在一起却常常是困难的。根据“新公民计划”的这份报告，2020年，有1.08亿儿童不能与父母双方共同居住在一起，其中8922万是受人口流动影响的儿童。他们中很多因此成为留守儿童，与在外地工作的父母相隔遥远。仅河南省就有留守儿童超过600万。与此同时，能随着父母一起迁徙的儿童只占流动人口子女总数的一半稍多（51.5%）。而在那些对于外来人口居住限制较多的城市，这种随迁率就更低。2020年，北京市流动人口子女的随迁率只有22.5%，上海也只有25%，广州为27.6%。还有部分流动人口的子女随着父母进城之后，因为各种原因与父母分离而返乡。2021年，中国全国就有92万进城务工随迁子女独自返乡，其中大部分成为留守儿童。北京郊区一所为农民工子女所开办的学校中的儿童（美联社资料图）不同的挑战对于留守儿童来说，他们的挑战是不能和父母在一起，在成长期缺失父母的亲情、指导和帮助。而随父母迁居异地的儿童也依然面临很多挑战。“新公民计划”2022年发布的《2022中国流动人口子女现状》曾着重分析了随迁子女就学的情况，显示其中80%能入读公办学校，20%入读民办学校。但这些随迁子女在异地入读公办学校时，常常会遭遇不公平待遇。身在纽约的非营利组织“劳工观察”创始人李强介绍说，中国随迁子女要入读本地公立学校，一般都要交一笔本地居民不必承担的赞助费，“你想想，打工的一对夫妻一年收入还不到10万元人民币，还需要加班加点，然后一个小孩上学就要赞助一、两万。”李强指出，中国针对流动人口子女歧视性的规定还体现在一些只有本地居民才能享有的财政补助上，“比如餐饮补助，和学校对低收入群体的补助，还有校车补助，有各种各样由财政支付、但外来工无法享有的补助。”目前身在荷兰的异议人士林生亮来自深圳。在这个外地务工人员大量聚集的城市，人脉甚广的林生亮常常会被人央求帮助办理外地工子女的入学资质，“我身边很多人都是这种情况，他们很痛苦。每年到孩子入学的时候，我就觉得他们像是人质被绑架一样，非常痛苦。”在林生亮看来，对于一般的外地务工人员，其子女入读公立学校的条件显得比较苛刻，“你要交社保，还要有租赁（租房）合同，你才能进公立学校读书，否则就读不了公立学校，要去私立学校就要收费，私立学校的师资等各方面条件又不够好。”深圳从至少十年前就开始实行“积分入学”的做法，对深圳户籍和符合深圳市就读条件的非深圳户籍儿童实行统一积分，根据申请儿童监护人的户籍、住房以及父母学历、职称高低等情况，进行打分排名，排名高的优先入学。这种做法似乎是为了冲破户籍与非户籍之间的屏障，但这种做法是否科学和公平，外界依然有不少质疑。据中国官媒人民网2013年报道，中国教育科学研究院研究员储朝晖认为，这种积分制实则是负向政策，在义务教育阶段对受教育对象进行分门别类的划分就是对受教育者权利的侵犯，从本质上说也是违法行为。林生亮则观察到，这种表面公平的积分制有很多猫腻，很多时候排名都是暗箱操作，积分排名不公布，这也是引发教育平权运动的原因之一，“后来很多人去搞教育平权，去搞示威游行，后来才把这种做法稍微公平一点点。”但这里的公平似乎并没有取得普遍的认可，人们仍然可以经常在社媒上看到对于流动人口子女无法得到公平教育权利的抱怨。中国非政府组织"新公民计划"日前发布《2023中国流动人口子女现状》中的中国流动人口规模图（新公民计划截图）工作也受歧视不仅上学得不到公平，这些外来务工人员的未成年子女想去工作也同样会遭到歧视。林生亮介绍说，在深圳，一半的工作没有歧视性的规定，但与政府有关联的企事业单位就会有地域性规定，比如网格员、学校的行政后勤人员、水电燃气公司等单位就只会招聘深圳本地户口的子女。李强则观察到，这种现象是全国性的，只是各地方程度不同，“比如保安类协助公务员工作的编制外工作，这种工作一般都要招收本地村镇人口的子女，外来工的子女要想找到这种工作都是很困难的。”林生亮说，无论是上学还是就业，这些针对外来务工人员子女的做法都显失公平，“纳税人人人平等，作为外来务工人员来到这座城市，作出了那么多贡献，他们也同样缴这个税。” 记者：王允   责编：何平  网编：洪伟```0
+ ```今年6月1日是第73个国际儿童节。中国非政府组织"新公民计划"日前发布《2023中国流动人口子女现状》，揭示出当前中国流动人口子女的生存状况。由于父母在中国不同城市迁徙，这个庞大的未成年人群体正遭遇什么样的挑战？ 后浪：输在起跑线上的孩子"留守儿童"家庭现状：团聚少问题多 根据联合国《儿童权利公约》的定义，儿童是指18岁以下的人口。如果不看数字，常人似乎很难想象，中国流动人口的子女人数已经达到1.38亿，占了中国儿童总数的近一半（46%）。也就是说，两个中国儿童中，就有一个是流动人口的子女。“新公民计划”的最新报告《2023中国流动人口子女现状：事实和数据》对此作了详实的研究，数据来源包括国家统计局第七次全国人口普查、《2020年中国人口普查年鉴》及历次人口普查和调查数据中关于中国儿童人口的描述分析，以及中国国家统计局、联合国儿童基金会、联合国人口基金联合发布的《2020年中国儿童人口状况：事实与数据》等等。在一起！在一起？作为儿童，与父母生活在一起似乎是天经地义。但对于中国的流动人口子女来说，与父母在一起却常常是困难的。根据“新公民计划”的这份报告，2020年，有1.08亿儿童不能与父母双方共同居住在一起，其中8922万是受人口流动影响的儿童。他们中很多因此成为留守儿童，与在外地工作的父母相隔遥远。仅河南省就有留守儿童超过600万。与此同时，能随着父母一起迁徙的儿童只占流动人口子女总数的一半稍多（51.5%）。而在那些对于外来人口居住限制较多的城市，这种随迁率就更低。2020年，北京市流动人口子女的随迁率只有22.5%，上海也只有25%，广州为27.6%。还有部分流动人口的子女随着父母进城之后，因为各种原因与父母分离而返乡。2021年，中国全国就有92万进城务工随迁子女独自返乡，其中大部分成为留守儿童。北京郊区一所为农民工子女所开办的学校中的儿童（美联社资料图）不同的挑战对于留守儿童来说，他们的挑战是不能和父母在一起，在成长期缺失父母的亲情、指导和帮助。而随父母迁居异地的儿童也依然面临很多挑战。“新公民计划”2022年发布的《2022中国流动人口子女现状》曾着重分析了随迁子女就学的情况，显示其中80%能入读公办学校，20%入读民办学校。但这些随迁子女在异地入读公办学校时，常常会遭遇不公平待遇。身在纽约的非营利组织“劳工观察”创始人李强介绍说，中国随迁子女要入读本地公立学校，一般都要交一笔本地居民不必承担的赞助费，“你想想，打工的一对夫妻一年收入还不到10万元人民币，还需要加班加点，然后一个小孩上学就要赞助一、两万。”李强指出，中国针对流动人口子女歧视性的规定还体现在一些只有本地居民才能享有的财政补助上，“比如餐饮补助，和学校对低收入群体的补助，还有校车补助，有各种各样由财政支付、但外来工无法享有的补助。”目前身在荷兰的异议人士林生亮来自深圳。在这个外地务工人员大量聚集的城市，人脉甚广的林生亮常常会被人央求帮助办理外地工子女的入学资质，“我身边很多人都是这种情况，他们很痛苦。每年到孩子入学的时候，我就觉得他们像是人质被绑架一样，非常痛苦。”在林生亮看来，对于一般的外地务工人员，其子女入读公立学校的条件显得比较苛刻，“你要交社保，还要有租赁（租房）合同，你才能进公立学校读书，否则就读不了公立学校，要去私立学校就要收费，私立学校的师资等各方面条件又不够好。”深圳从至少十年前就开始实行“积分入学”的做法，对深圳户籍和符合深圳市就读条件的非深圳户籍儿童实行统一积分，根据申请儿童监护人的户籍、住房以及父母学历、职称高低等情况，进行打分排名，排名高的优先入学。这种做法似乎是为了冲破户籍与非户籍之间的屏障，但这种做法是否科学和公平，外界依然有不少质疑。据中国官媒人民网2013年报道，中国教育科学研究院研究员储朝晖认为，这种积分制实则是负向政策，在义务教育阶段对受教育对象进行分门别类的划分就是对受教育者权利的侵犯，从本质上说也是违法行为。林生亮则观察到，这种表面公平的积分制有很多猫腻，很多时候排名都是暗箱操作，积分排名不公布，这也是引发教育平权运动的原因之一，“后来很多人去搞教育平权，去搞示威游行，后来才把这种做法稍微公平一点点。”但这里的公平似乎并没有取得普遍的认可，人们仍然可以经常在社媒上看到对于流动人口子女无法得到公平教育权利的抱怨。中国非政府组织"新公民计划"日前发布《2023中国流动人口子女现状》中的中国流动人口规模图（新公民计划截图）工作也受歧视不仅上学得不到公平，这些外来务工人员的未成年子女想去工作也同样会遭到歧视。林生亮介绍说，在深圳，一半的工作没有歧视性的规定，但与政府有关联的企事业单位就会有地域性规定，比如网格员、学校的行政后勤人员、水电燃气公司等单位就只会招聘深圳本地户口的子女。李强则观察到，这种现象是全国性的，只是各地方程度不同，“比如保安类协助公务员工作的编制外工作，这种工作一般都要招收本地村镇人口的子女，外来工的子女要想找到这种工作都是很困难的。”林生亮说，无论是上学还是就业，这些针对外来务工人员子女的做法都显失公平，“纳税人人人平等，作为外来务工人员来到这座城市，作出了那么多贡献，他们也同样缴这个税。” 记者：王允   责编：何平  网编：洪伟```0
   ## 6/1/2023 - [王丹出席民主峰会　希望德国议会关注中国人权个案](https://www.rfa.org/mandarin/yataibaodao/renquanfazhi/ck-06012023100626.html)
  ```六四天安门34周年前夕，中国民运人士王丹受邀前往丹麦，参加哥本哈根民主高峰会。为期一周的欧洲行，王丹不但会见捷克总统帕维尔，针对中国问题交换看法外，也向德国自民党人权发言人海特提出，希望德国议会关注许志永等人权案件，并向中国施压。 海外华人连署许志永、丁家喜竞取诺贝尔和平奖专访丁家喜妻子罗胜春：中国政府在制造冤假错案郭飞雄被以"煽颠罪"重判　国际舆论呼吁放人海外民主人士推动许志永、丁家喜角逐诺贝尔和平奖联合国谴责中国重判许志永丁家喜　美国务院要求立即释放二人 非政府组织民主联盟基金会（AllianceofDemocracies）五月中举办第六届「哥本哈根民主高峰会」（CopenhagenDemocracySummit），除了台湾总统蔡英文透过视频在高峰会发表谈话，北约前秘书长、丹麦前总理拉斯穆森（AndersFoghRasmussen）也邀请中国民运人士，同时也是前六四学生领袖王丹与会。期间，王丹曾与捷克总统彼得·帕维尔（PetrPavel）针对中国问题交换看法。王丹：“比较核心的一点，他就提到现在欧洲国家在欧洲对华政策的制订上遇到一个问题，这个问题就是很多的欧洲国家是希望中国出来调停俄乌战争的，虽然他个人对此不是那么有信心，但必须正视这个现实。他问我怎么看，我说(中国)绝对不可能(调停)。“虽然捷克总统对中国持疑，然而王丹观察，更多欧洲政客或智库人员，选择相信中国，对习近平有所求，因此对华政策调整有限，但已经有进步。王丹：“这次我到欧洲，见到的国会议员和政要们，几乎很少听到要跟中国保持友好，最低都是保持竞争和警剔的态度。“王丹：“西方不该对中国人权灾难保持冷漠”而王丹也在德国针对人权问题，拜会德国自民党（FDP）人权发言人、国会议员彼得.海特（音译，PeterHeidt）。 前六四学运领袖王丹拜会德国自民党（FDP）人权发言人、国会议员彼得.海特（PeterHeidt）。（照片经王丹授权使用） 王丹：“我跟他们讲，发生的基本就是人权灾难，我觉得西方社会应该要有自己的人权坚持，不应该对这种人权灾难保持冷漠，我也特别列举几个案子，例如许志永、丁家喜的案子，例如说最近的案子，郭飞雄被重判的案子。““六四纪念馆”假帐号两天出现九个在结束欧洲行之际，王丹发现六四34周年前夕，开始有人针对当年的六四学运提出质疑。王丹：“我觉得事情过去34年，回头反思，有人会批評当初这些学生太激进，但我现在反思的结果，正好相反，我觉得当年的学生太理性。其实面对这样一个政权，我们当初犯的是跟现在西方政客一样的错误，就是以为对方是可以理性的，和平交谈的对象，但历史已经证明，根本就不是嘛，当年的学生那么的理性，结果换来的还是镇压。“另外，即将在美国曼哈顿开幕六四纪念馆，短短两天之内，居然在臉書、推特上出现九个假账号。 六四纪念馆将在今年六月四日开幕，近日却出现大量假帐号。（图/翻摄自王丹脸书照片经授权使用） 王丹：“这当然不可能是一般网民自发的行为，这显然是中共相关部门、情报部门、其它部门，专门组织集团性的破坏。”而这些假帐号不但意图混淆视听，王丹也担心中国网军试图用钓鱼的方式，钓出支持群众，不得不提防。 记者：郭宸绮  责编:嘉远  网编:何足```0
   ## 6/1/2023 - [中国拒绝美中防长会晤　李尚福现身新加坡](https://www.rfa.org/mandarin/yataibaodao/junshiwaijiao/hx2-06012023114156.html)
