--- a/新闻/美国之音.md
+++ b/新闻/美国之音.md
@@ -1,4 +1,12 @@
 
+  ## 6/2/2023 - [六四周年将至，港人在国安法淫威下选择私下纪念
+
+](https://www.voachinese.com/a/amid-shrinking-freedoms-hong-kongers-commemorate-tiananmen-anniversary-privately-20230602/7119986.html)
+ ```即将到来的星期天（6月4日）将是天安门血腥屠杀事件34周年纪念日，但是多年来一直在六四当天举办大型纪念活动，公开向罹难者致哀致敬的港人现在却在国安法的阴霾与淫威下，被迫选择私下举行悼念活动。```0
+  ## 6/2/2023 - [人权观察呼吁北京承认对六四大屠杀的责任
+
+](https://www.voachinese.com/a/china-barred-34-years-after-bloody-tiananmen-massacre-20230602/7119991.html)
+ ```六四天安门镇压事件三十四周年纪念日即将来临，总部设在美国纽约的人权观察呼吁中国政府承认自己在这场历史悲剧中应负的历史责任，为六四事件的死难者及其家属提供赔偿。```0
   ## 6/2/2023 - [美中战略竞争之际 中国银行将在巴新设首家分行](https://www.voachinese.com/a/bank-of-china-chairman-visits-papua-new-guinea-amid-sino-us-strategic-rivalry-20230602/7119963.html)
  ```中国银行(BankofChina)董事长葛海蛟已前往南太平洋岛国巴布亚新几内亚，这家世界第四大银行寻求获得巴新的营业执照。巴新正在寻求推进与中国的贸易，并同时扩大与美国的防务关系。```0
   ## 6/2/2023 - [中国往返美国4条新航班 避开俄罗斯领空](https://www.voachinese.com/a/us-china-flights-russia-20230602/7119928.html)
@@ -35,7 +43,3 @@
  ```随着中国16至24岁青年人的失业率今年4月达到创纪录的20.4%，今年即将毕业的1158万名大学毕业生将面临一个越来越严峻的就业市场，或“一个没有职位的就业市场”。```0
   ## 6/1/2023 - [举办六四晚会逾30年，澳门民联会不堪高压宣告解散](https://www.voachinese.com/a/macau-s-tiananmen-massacre-group-disbands-for-fear-of-new-law-20230601/7118877.html)
  ```近年澳门当局把悼念六四定性为分裂国家和颠覆中央人民政府，加上新的国家安全法实施，成立超过30年的澳门民主发展联委会（民联会）决定自行解散。不过，今年六四，前民联会核心成员仍将以自己的方式，悼念当年在北京天安门广场发生的悲剧。```0
-  ## 6/1/2023 - [中国与新加坡防长会晤 同意建立两国军方高层电话热线](https://www.voachinese.com/a/china-and-key-us-partner-singapore-agree-to-top-level-defense-hotline-060123/7118801.html)
- ```中国国防部长李尚福星期四（6月1日）在新加坡与新加坡国防部长黄永宏举行会晤，两人并签署一项合作备忘录，计划建立一条两国军方领导人之间的保密电话热线。```0
-  ## 6/1/2023 - [中国新冠疫情卷土重来 政府躺平 民众淡然](https://www.voachinese.com/a/china-is-bracing-for-a-massive-new-wave-of-covid-cases-20230601/7118745.html)
- ```继2022年底中国结束清零政策全国新冠疫情大爆发之后，近期中国又再次面临新冠持续感染高峰，甚至出现病人求医寻药导致医院爆满的现象。不少患者之前已经历感染，如今随着抗体水平的下降再次感染，但是大都症状较轻，并没有明显影响日常生活。然而，医学专家对于中国目前没有有效疫苗和放弃统计的做法感到担忧，认为这无助于应对将来的持续感染。```0
